Java_grammer_Update

--- a/_posts/2025-10-02-Java_Ch1.md
+++ b/_posts/2025-10-02-Java_Ch1.md
@@ -14,10 +14,13 @@ sidebar:
   nav: "categories_sidebar"
 ---
 
-# Java 기본 문법
+
+# Java 기본 프로그래밍
 
 
 Java는 객체지향형 프로그래밍 언어로, 기본 문법을 잘 숙지하는 것이 중요하다.
+
+
 
 
 ## 1. 자바 프로그램의 기본 구조
