Java-grammer-Ch2 Update

--- a/_posts/2025-10-02-Java_Ch1.md
+++ b/_posts/2025-10-02-Java_Ch1.md
@@ -565,5 +565,5 @@ a << b      //a의 각 비트를 왼쪽으로 b번 시프트.
 
 
 
-여기까지 자바의 기본 문법에 대해 공부해 봤다.
+지금까지 자바의 기본 문법에 대해 공부해 보았다.<br>
 다음 글에서는 자바의 조건문에 대해 공부해 보겠다.
