--- a/_posts/2025-10-05-Java_Ch2.md
+++ b/_posts/2025-10-05-Java_Ch2.md
@@ -18,7 +18,7 @@ sidebar:
 # Java 조건문
 
 
-Java에서 조건문을 이용하면 조건의 참, 거짓에 따라 다른 작업을 수행할 수 있다.
+Java에서 조건문을 이용하면 조건의 참, 거짓에 따라 다른 작업을 수행할 수 있다.<br>
 다른 언어들의 조건문과 거의 동일하며, if-else문, switch문으로 분류된다.
 
 
@@ -69,10 +69,266 @@ public class Age{
 ```
 
 
-위 프로그램은 사용자의 나이를 정수로 입력 받은 뒤,
+위 프로그램은 사용자의 나이를 정수로 입력 받은 뒤,<br>
 20대인지 아닌지 판별해 주는 프로그램이다.
 
 
-if 조건문에서 입력 받은 나이가 20살 이상, 30살 미만인지 검사한 후,
-조건식이 참(20살 이상, 30살 미만)일 경우 "20대 입니다." 라는 실행문 1을,
-거짓(20살 미만, 30살 이상)일 경우 "20대가 아닙니다." 라는 실행문 2를 출력한다. 
+if 조건문에서 입력 받은 나이가 20살 이상, 30살 미만인지 검사한 후,<br>
+조건식이 참(20살 이상, 30살 미만)일 경우 "20대 입니다." 라는 실행문 1을,<br>
+거짓(20살 미만, 30살 이상)일 경우 "20대가 아닙니다." 라는 실행문 2를 출력한다.<br>
+
+
+
+
+
+
+## 2. 다중 if-else문
+
+
+if-else문에서 조건식 검사를 여러 가지로 나누어서 할 수도 있다.<br>
+이게 바로 다중 if-else문이다.<br>
+기본적인 형태는 다음과 같다.
+
+
+```java
+if(조건식1){
+    실행할 문장1
+}
+else if(조건식2){
+    실행할 문장2
+}
+else if(조건식3){
+    실행할 문장3
+}
+else{
+    실행할 문장4
+}
+```
+
+
+이렇게 조건을 여러 가지로 분기할 때 사용할 수 있다.<br>
+아래의 간단한 예제 프로그램으로 자세히 알아보겠다.
+
+
+```java
+import java.util.Scanner
+
+public class Grading{
+    public static void main(String[] args){
+        char grade;
+        Scanner sc = new Scanner(System.in);
+
+        System.out.print("점수 입력>>>");
+
+        int score = sc.nextInt();
+
+        if(score >= 90){
+            grade = 'A';
+        }
+        else if(score >= 80){
+            grade = 'B';
+        }
+        else if(score >= 70){
+            grade = 'C';
+        }
+        else if(score >= 60){
+            grade = 'D';
+        }
+        else{
+            grade = 'F';
+        }
+
+        System.out.println("학점: " + grade);
+        
+        sc.close();
+    }
+}
+```
+
+
+위 프로그램은 사용자에게 점수를 입력 받은 후, 학점을 부여하는 프로그램이다.<br>
+첫번째 조건식에서부터 검사를 시작하며, 조건이 참일 시 해당하는 실행 문장을 실행 후,<br>
+다중 if-else문을 벗어난다. 만약 사용자가 87을 입력했다면 grade = 'B' 가 되어
+다중 if-else문을 벗어나게 되는 것이다.
+
+
+
+
+
+
+## 3. 중첩 if-else문
+
+
+if문이나 if-else문, else문은 다시 if문이나 if-else문을 내포할 수 있다.<br>
+이것이 바로 중첩 if-else문이다.<br>
+예시로 다음과 같이 사용이 가능하다.
+
+
+```java
+if(조건식1){
+    if(조건식1-1){
+        실행할 문장
+    }
+    else{
+        실행할 문장
+    }
+}
+else{
+    실행할 문장
+}
+```
+
+
+이것이 절대적인 형태는 아니고, 프로그래머가 적절하게 배치해 사용할 수 있다.<br>
+아래의 간단한 예제 프로그램으로 자세히 알아보겠다.
+
+
+```java
+import java.util.Scanner
+
+public class NestedIf(){
+    public static void main(String[] args){
+        Scanner sc = new Scanner(System.in);
+
+        System.out.print("점수 입력>>>");
+        int score = sc.nextInt();
+
+        System.out.print("학년 입력>>>");
+        int year = sc.nextInt();
+
+        if(score >= 60){
+            if(year != 4){
+                System.out.println("합격");
+            }
+            else if(score >= 70){
+                System.out.println("합격");
+            }
+            else{
+                System.out.println("불합격");
+            }
+        }
+        else{
+            System.out.println("불합격");
+        }
+        sc.close();
+    }
+}
+```
+
+
+위 프로그램은 사용자에게 점수와 학년을 입력받아, 합불을 출력하는 프로그램이다.<br>
+기본적으로 60점 이상은 합격이나, 조건문 안에 다시 조건문을 추가하여<br>
+4학년은 70점 이상이 되어야만 합격을 출력해 준다. 
+
+
+만약 사용자가 점수에 77, 학년에 4를 입력했다면,
+
+
+1. 첫번째 if문 if(score >= 60) 안으로 들어간다.
+
+
+2. 조건문 안의 조건문 if(year != 4)을 검사한 결과, 참이 아니므로
+
+
+3. else if(score >= 70) 을 검사한다.
+
+
+4. 검사 결과 참이므로 "합격" 을 출력한 뒤 모든 if문을 벗어난다.
+
+
+
+
+
+## 4. switch문
+
+
+만약 값에 따라 여러 방향으로 분기하는 경우, if-else문 보다<br>
+switch문을 사용하게 되면, 깔끔한 코드 작성이 가능해진다.<br>
+기본적인 형태는 아래와 같다.
+
+
+```java
+switch(식){
+    case 값1:
+        실행할 문장1;
+        break;
+    case 값2:
+        실행할 문장2;
+        break;
+    case 값3:
+        실행할 문장3
+        break;
+    case 값m:
+        실행할 문장m;
+        break;
+    default: //어느 것과도 같지 않을 때
+        break;
+}
+```
+
+
+switch문은 먼저 '식'을 계산하고 그 결과 값과 일치하는 case문으로 분기한다.<br>
+case문의 실행 문장을 실행하고 break를 만나면 switch문을 벗어난다.<br>
+만약 break가 없으면, 다음 case문의 break를 만날 때까지 실행된다<br>
+또한 case 문에 지정하는 값은 정수, 문자, 문자열 리터럴만 사용 가능하다.<br>
+변수나 식 자체를 사용할 수 없다는 뜻이다.
+
+
+```java
+int b;
+
+switch(b){
+    case a:         //오류. 변수 사용 불가
+        break;
+    case a > 3:     //오류. a > 3 식 사용 불가
+        break;
+    case a == 1:    //오류. a == 1 식 사용 불가
+        break;
+}
+```
+
+
+오류가 나는 예시를 들자면 위와 같다.
+
+
+마지막으로 switch문을 사용한 간단한 예제 프로그램을 작성해 보겠다.
+
+
+```java
+import java.util.Scanner
+
+public class Season{
+    public static void main(String[] args){
+        Scanner sc = new Scanner(System.in);
+
+        System.out.print("월 입력>>>");
+        int month = sc.nextInt();
+
+        switch(month){
+            case 3: case 4: case 5:
+                System.out.println(month + " 월은 봄 입니다.");
+                break;
+            case 6: case 7: case 8:
+                System.out.println(month + " 월은 여름 입니다.");
+                break;
+            case 9: case 10: case 11:
+                System.out.println(month + " 월은 가을 입니다.");
+                break;
+            case 12: case 1: case 2:
+                System.out.println(month + " 월은 겨울 입니다.");
+                break;
+            default:
+                System.out.println("잘못된 입력입니다.");
+        }
+        sc.close();
+    }
+}
+```
+
+
+위 프로그램은 사용자에게 월을 입력 받아, 계절을 출력해 주는 프로그램이다.<br>
+같은 문장을 실행하는 case문들은 위와 같이 여러개를 나열해서 묶어줄 수 있다.<br>
+
+
+지금까지 자바의 조건문에 대해 공부해 보았다.<br>
+다음 글에서는 자바의 반복문에 대해서 공부해 보겠다.
