--- a/_posts/2025-10-05-Java_Ch2.md
+++ b/_posts/2025-10-05-Java_Ch2.md
@@ -46,7 +46,7 @@ else{
 
 
 ```java
-import java.util.Scanner
+import java.util.Scanner;
 
 public class Age{
     public static void main(String[] args){
@@ -111,7 +111,7 @@ else{
 
 
 ```java
-import java.util.Scanner
+import java.util.Scanner;
 
 public class Grading{
     public static void main(String[] args){
@@ -184,7 +184,7 @@ else{
 
 
 ```java
-import java.util.Scanner
+import java.util.Scanner;
 
 public class NestedIf(){
     public static void main(String[] args){
@@ -234,6 +234,7 @@ public class NestedIf(){
 
 
 4. 검사 결과 참이므로 "합격" 을 출력한 뒤 모든 if문을 벗어난다.
+
 
 
 
@@ -295,7 +296,7 @@ switch(b){
 
 
 ```java
-import java.util.Scanner
+import java.util.Scanner;
 
 public class Season{
     public static void main(String[] args){
@@ -328,6 +329,9 @@ public class Season{
 
 위 프로그램은 사용자에게 월을 입력 받아, 계절을 출력해 주는 프로그램이다.<br>
 같은 문장을 실행하는 case문들은 위와 같이 여러개를 나열해서 묶어줄 수 있다.<br>
+
+
+-----------------------------------------------------------------------<br>
 
 
 지금까지 자바의 조건문에 대해 공부해 보았다.<br>
