--- a/_posts/2025-10-02-Java_Ch1.md
+++ b/_posts/2025-10-02-Java_Ch1.md
@@ -128,7 +128,7 @@ System.out.print 는 출력 후 다음 행으로 넘어가지 않는다.
 
 
 데이터 타입이란, 다룰 수 있는 데이터의 종류를 의미한다.
-자바는 기본 타입 8개, 래퍼런스 타입 1개로 총 9개의 데이터 타입을 다룰 수 있다.
+자바는 기본 타입 8개, 레퍼런스 타입 1개로 총 9개의 데이터 타입을 다룰 수 있다.
 지금은 기본 타입 8개에 대해서만 공부해 보도록 하겠다.
 
 
@@ -569,4 +569,4 @@ a << b      //a의 각 비트를 왼쪽으로 b번 시프트.
 
 
 지금까지 자바의 기본 문법에 대해 공부해 보았다.<br>
-다음 글에서는 자바의 조건문에 대해 공부해 보겠다.
+다음 글에서는 자바의 조건문에 대해서 공부해 보겠다.
