--- a/_posts/2025-11-06-Java_Ch6.md
+++ b/_posts/2025-11-06-Java_Ch6.md
@@ -18,3 +18,181 @@ sidebar:
 # Java의 클래스와 객체
 
 
+자바는 객체 지향 언어이다.<br>
+그럼 여기서 말하는 객체는 무엇일까?<br>
+사전에서는 객체를 '의사나 행위가 미치는 대상' 또는 '작용의 대상이 되는 쪽' 으로 정의한다.<br>
+우리가 사는 세계에서 주변에서 찾아볼 수 있는 모든 것이 객체라고 할 수 있다.<br>
+컴퓨터, 책, 책상, 의자... 더 나아가 사람 또한 객체이다.<br>
+객체들은 자신만의 고유한 특성과 행동을 가지며, 다른 객체들에게 행동을 요구하거나<br>
+정보를 주고받는 등 상호작용하며 살아간다.<br>
+
+
+## 1. 자바의 객체 지향 특성
+
+
+객체 지향 언어는 실세계의 객체를 프로그램 내에 표현하기 위해 클래스와 객체를 도입했다.<br>
+객체 지향 언어는 다음과 같은 특성을 가진다.<br>
+
+
+### 캡슐화(encapsulation)
+
+
+'캡슐화'란 객체를 하나의 캡슐처럼 묶어,<br> 
+외부의 직접적인 접근으로부터 내부 데이터를 보호하는 특성이다.<br>
+하지만 외부와의 상호작용을 위해 필요한 일부 기능은 공개적으로 제공한다.<br>
+예를 들어 TV의 전원 버튼, 채널 버튼, 음량 조절 버튼 등이 이에 해당한다.<br>
+
+
+자바에서 클래스(class)는 객체의 모양을 선언한 틀이며,<br>
+클래스 모양 그대로 생성된 실체(instance)가 객체이다.<br>
+
+
+```java
+class Animal{
+    String name;
+    int age;
+    void eat(){...};
+    void speak(){...};
+}
+```
+
+
+자바는 위와 같이 클래스 내에 필드(field)와 메소드(method)를 모두 구현한다.<br>
+(****여기서 필드(field)는 클래스 내에 속한 변수로, 객체의 상태(데이터)를 저장하고,<br>
+메소드(method)는 클래스 내에 속한 함수로, 객체의 행동을 정의한다.****)<br>
+그리고 이렇게 만들어진 클래스는 캡슐화를 통해 외부로부터의 직접적인 접근이 제한된다.<br>
+
+
+
+
+
+
+### 상속(inheritance)
+
+
+'상속'은 상위 개체의 속성이 하위 개체에게 물려져서,<br>
+하위 개체가 상위 개체의 속성을 모두 가지는 개념이다.<br>
+
+
+![상속 예시](/assets/images/상속%20예시.png)<br>
+
+
+위 사진은 생물 분류에서 상속 예시를 도식화 한 사진이다.<br>
+각 하위 개체들은 상위 개체들의 속성을 모두 포함한다.<br>
+
+
+이처럼 자바의 상속 또한 자식 클래스가 부모 클래스의 속성을 물려받아,<br>
+부모 클래스의 기능을 확장하는 개념이다.<br>
+또 부모 클래스는 슈퍼 클래스, 자식 클래스는 서브 클래스라고 부른다.<br>
+
+
+상속은 슈퍼 클래스의 필드와 메소드를 재사용함으로써 코드의 중복 작성을 방지한다.<br>
+코드의 재사용으로 인해 시간과 비용을 줄일 수 있는 것이다.<br>
+
+
+```java
+class Animal{
+    String name;
+    int age;
+    void eat(){...};
+    void speak(){...};
+}
+
+class Human extends Animal{
+    String hobby;
+    String job;
+    void work(){...};
+    void laugh(){...};
+}
+```
+
+
+Human 클래스는 Animal 클래스를 상속받았기 때문에<br>
+Animal 클래스의 필드와 메서드를 다시 선언할 필요가 없다.<br>
+
+
+```java
+//Animal의 객체
+String name;
+int age;
+------------
+void eat();
+void speak();
+
+
+//Human의 객체
+String name;
+int age;
+------------
+void eat();
+void speak();
+------------
+String hobby;
+String job;
+------------
+void work();
+void laugh();
+```
+
+
+위와 같이 객체가 형성되는 것이다.<br>
+
+
+
+
+
+
+### 다형성(polymorphism)
+
+
+'다형성'은 같은 이름의 메소드가 클래스 또는 객체에 따라 다르게 구성되는 것이다.<br>
+예를 들어 동물의 울음소리(speak())가 고양이, 강아지, 새 등 객체마다 다르기 때문에,<br>
+각 동물들의 클래스는 Animal 클래스를 상속받고, speak() 메소드는 각 동물의 특징에 맞게 다르게 구현되어야 한다.<br>
+
+
+다형성은 '메소드 오버라이딩'과 '메소드 오버로딩'의 두 가지 형태로 나뉜다.<br>
+
+**메소드 오버라이딩(Method Overriding)**<br>
+●슈퍼클래스(부모 클래스) 에 이미 정의된 메서드를<br>
+서브클래스(자식 클래스) 가 같은 이름, 같은 매개변수, 같은 반환 타입 으로 다시 정의한다.<br>
+●부모의 기능을 자식 클래스의 특성에 맞게 재정의할 때 사용된다.<br>
+
+
+```java
+class Animal{
+    void speak(){
+        System.out.println("동물이 소리를 냅니다.");
+    }
+}
+
+class Dog extends Animal{
+    @Override
+    void speak(){
+        System.out.println("멍멍!");
+    }
+}
+```
+
+
+**메소드 오버로딩(Method Overloading)**<br>
+●같은 클래스 내에서 메서드 이름은 같지만,<br>
+매개변수의 개수나 타입 을 다르게 하여 여러 메서드를 정의한다.<br>
+●같은 기능을 다양한 입력 형태로 처리할 수 있게 해준다.<br>
+
+
+```java
+class Calculator{
+    int add(int a, int b){
+        return a+b;
+    }
+    double add(double a, double b){
+        return a+b;
+    }
+}
+```
+
+
+---------------------------------------------------------------------------------
+
+
+객체 지향 언어(Object-Oriented Language) 는 앞서 살펴본 캡슐화, 상속, 다형성 등의 기법을 통해 유지보수성과 재사용성이 높은 소프트웨어를 제작할 수 있는 장점을 가진다.<br>
