--- a/_posts/2025-10-02-Java_Ch1.md
+++ b/_posts/2025-10-02-Java_Ch1.md
@@ -5,6 +5,9 @@ date: 2025-10-02
 categories:
   - Java
   - java_grammer
+tag:
+  - Java
+  - 문법
 author_profile: true
 read_time: true
 comments: true
