--- a/_posts/2025-11-06-Java_Ch6.md
+++ b/_posts/2025-11-06-Java_Ch6.md
@@ -402,3 +402,101 @@ public class Circle {
 단순 리턴만 하는 생성자이다. 생성자가 없는 클래스는 존재할 수 없기 때문에,<br>
 생성자가 하나도 작성되지 않은 클래스의 경우 컴파일러는 기본 생성자를 자동 생성한다.<br>
 하지만 생성자가 하나라도 존재하는 경우, 기본 생성자의 자동 생성은 이루어지지 않는다.<br>
+
+
+
+
+
+
+## 4. this 레퍼런스
+
+
+### this
+
+
+this는 객체 자신에 대한 레퍼런스로, 메소드 안에서 사용된다.<br>
+컴파일러에 의해 관리되므로 단순 사용만 하면 된다.<br>
+
+
+```java
+public class Circle {
+	int radius;
+	public Circle() { this.radius = 1; }
+	public CIrcle(int r) { this.radius = r; } //멤버와 매개변수
+	public double getArea(){ return 3.14 * this.radius * this.radius; }
+}
+```
+
+
+참고로 this는 현재 객체에 대한 레퍼런스이므로 객체가 있어야 this 또한 의미가 있다.<br>
+
+
+### this()
+
+
+this()는 클래스 내에서 생성자가 다른 생성자를 호출할 때 사용한다.<br>
+
+
+```java
+public class Book() {
+	String title;
+	String author;
+
+	public Book() {
+		this("", "");
+	}
+
+	public Book(String t) {
+		this(t, "작자 미상");
+	}
+
+	public Book(String t, String a) {
+		this.title = t;
+		this.author = a;
+	}
+
+	public static void main(String [] args) {
+		Book loveStory = new Book("춘향전");
+		Book emptyBook = new Book();
+	}
+}
+```
+
+
+이 예시 프로그램에서 각 객체가 생성되는 과정을 알아보겠다.<br>
+먼저 loveStory 객체를 생성할 때, 매개변수 한 개짜리(제목) 생성자를 이용했다.<br>
+하지만 그 생성자는 this()로 다른 생성자를 호출하고 있기 때문에<br>
+최종적으로 호출되는 생성자는 매개변수 두 개짜리(제목, 작가) 생성자가 호출되고,<br>
+title = "춘향전" , author = "작자 미상" 이 되는 것이다.<br>
+
+
+이런 this()를 사용할 때의 주의점이 있다.<br>
+
+1. this()는 생성자에서만 사용된다<br>
+
+2. this()는 반드시 같은 클래스의 다른 생성자를 호출할 때 사용된다.<br>
+
+3. this()는 반드시 생성자의 첫 번째 문장으로 사용되어야 한다.<br>
+
+
+마지막 주의사항에 대해 좀 더 설명해 보자면,<br>
+
+
+```java
+public Book() {
+	System.out.println("생성자 호출됨.");
+	this("", "");
+}
+```
+
+
+이런 식으로 사용하면 컴파일 오류가 난다는 뜻이다.<br>
+올바르게 사용하려면 아래와 같이 사용해야 한다.<br>
+
+
+```java
+public Book() {
+	this("", "");
+	System.out.println("생성자 호출됨.");
+}
+```
