--- a/_posts/2025-11-06-Java_Ch6.md
+++ b/_posts/2025-11-06-Java_Ch6.md
@@ -500,3 +500,187 @@ public Book() {
 	System.out.println("생성자 호출됨.");
 }
 ```
+
+
+
+
+
+
+## 5. 객체 배열
+
+
+다른 자료형과 마찬가지로 객체 또한 배열을 만들 수 있다.<br>
+객체 배열은 객체에 대한 레퍼런스를 원소로 갖는 배열이다.<br>
+
+
+객체 배열을 만들고 사용하는 방법은 아래와 같다.
+
+
+```java
+Circle [] c; 		//1. Circle 클래스에 대한 레퍼런스 변수 선언
+c = new Circle[5];  //2. 레퍼런스 배열 5개 생성
+
+
+for(int i = 0; i < c.length; i++) {
+	c[i] = new Circle(i);
+}					//3. 배열의 크기만큼 객체 생성
+
+for(int i = 0; i < c.length; i++) {
+	System.out.println((int)(c[i].getArea()) + " ");
+}					//4. 배열의 각 원소 객체에 접근해 면적 출력
+```
+
+
+여기서 주의할 점은 1번 단계에서 Circle [5] c; 와 같이 크기를 지정하면 안된다.<br>
+선언문은 레퍼런스의 변수를 선언할 뿐이지 배열을 생성하는 것이 아니기 때문이다.<br>
+
+
+
+
+
+
+## 6. 메소드 활용과 객체 치환
+
+
+자바의 메소드 형식은 아래와 같다.<br>
+
+![메소드 예시](/assets/images/메소드%20구성.png)<br>
+
+
+### 접근 지정자
+
+
+자바에서 메소드는 반드시 접근 지정자와 함께 선언되어야 한다.<br>
+접근 지정자는 'public'(클래스 내/외부 모두 호출 가능),<br>
+'private'(클래스 멤버들만 호출 가능),<br>
+'protected'(동일 패키지의 클래스들과 상속받은 서브 클래스에서 호출 가능)<br>
+가 있고, 접근 지정자가 생략된 디폴트 접근 지정의 경우 동일 패키지의 모든<br>
+클래스에서 호출 가능하다.<br>
+
+
+### 리턴 타입
+
+
+리턴 타입은 메소드가 호출자에게 리턴할 값의 타입이다.<br>
+위의 getSum 함수는 int형 자료 sum을 리턴하기 때문에 리턴 타입은 int이다.<br>
+만약 아무런 값을 리턴하지 않을 경우 void로 선언한다.<br>
+
+
+### 인자 전달
+
+
+메소드 호출 시에 인자 전달의 경우, 실인자의 값이 매개변수에 복사되어 전달된다.<br>
+그렇기에 메소드 종료 시 메인 메소드에 선언된 지역 변수의 값은 변경하지 못한다.<br>
+
+
+만약 메소드의 매개변수가 클래스 타입인 경우, 객체의 레퍼런스 값이 전달된다.<br>
+이 경우 매개변수가 객체를 가리키게 되고, 메소드가 끝나도 변경값이 유지된다.<br>
+단, 메소드 호출 시 객체가 전달되는 경우, 객체가 통째로 복사되는 것이 아니다.<br>
+객체에 대한 레퍼런스만 전달된다.<br>
+
+
+배열이 전달되는 경우도 객체와 동일하게 배열에 대한 레퍼런스만 전달된다.<br>
+
+
+이 객체에 대한 레퍼런스, 배열에 대한 레퍼런스는<br> 
+객체 또는 배열이 위치한 메모리를 가리키는 정보(일종의 주소값)라고 보면 된다.<br>
+
+
+일반적인 자료형(int,double...)은 변수에 데이터값 자체가 저장되지만,<br>
+배열이나 객체는 참조형이기에 데이터가 위치한 메모리를 가리키는 레퍼런스가 저장된다.<br>
+
+```java
+int a = 10;					//변수에 데이터 자체가 저장
+
+int [] arr = new int[3];	//변수에 주소값이 저장
+
+arr[0] = 1;					//arr의 첫번째 요소에 데이터 자체가 저장
+```
+
+
+위와 같이 정리할 수 있다.<br>
+
+
+
+
+
+
+## 7. 메소드 오버로딩
+
+
+자바에서는 다형성의 한 종류인 메소드 오버로딩이 가능하다.<br>
+메소드 오버로딩은 클래스 내에 이름이 같지만 매개변수의 타입, 개수가 다른<br>
+메소드를 여러 개 작성하는 것이다.<br>
+주의할 점은 리턴 타입과 접근 지정자는 오버로딩과 관계가 없다.<br>
+
+
+
+
+
+
+## 8. 객체 치환
+
+
+Circle 이라는 객체를 3개 생성해 보자.<br>
+
+
+```java
+Circle c1 = new Circle(1);
+Circle c2 = new Circle(2);
+Circle c3;
+```
+
+여기서 만약 c3 = c2; , c1 = c2; 를 작성해 실행할 경우,<br>
+c3 과 c1은 변수가 가리키는 객체 바뀜이 이루어져 c2 객체를 가리키게 된다.<br>
+그렇게 되면 c1이 가리키던 객체는 아무도 가리키지 않게 되어,<br>
+프로그램에서 접근할 수 없는 상태가 된다. 이 상태의 객체를 가비지(garbage)라고 한다.<br>
+
+
+
+
+
+
+## 9. 객체의 소멸과 가비지 컬렉션
+
+
+### 객체 소멸
+
+
+자바에서는 객체를 생성하는 new 연산자는 있지만, 객체 소멸 연산자는 존재하지 않는다.<br>
+자바에서는 응용프로그램에서 사용되지 않는 객체나 배열 메모리를 자바 가상 기계가<br>
+알아서 회수하기 때문에, 메모리 해제를 신경쓰지 않아도 된다.<br>
+
+
+### 가비지
+
+
+할당받은 객체나 배열 메모리 중 더 이상 사용하지 않게 된 메모리를<br>
+가비지(garbage)라고 한다.<br>
+자바 플랫폼은 참조하는 레퍼런스가 하나도 없는 객체나 배열을 가비지로 본다.<br>
+
+
+### 가비지 컬렉션
+
+
+가비지가 많아지면 응용프로그램에 할당해 줄 수 있는 가용 메모리 양이 줄고,<br>
+가용 메모리가 0이 되면 응용프로그램은 실행 불가 상태가 된다.<br>
+이를 막기 위해 자바 가상 기계는 가비지를 자동으로 회수하여 가용 메모리 공간을 늘린다.<br>
+이걸 가비지 컬렉션이라고 부른다.<br>
+
+
+### 가비지 컬렉션 강제 수행
+
+
+System 또는 Runtime 객체의 gc() 메소드를 호출하여<br>
+자바 플랫폼에 가비지 컬렉션을 요청할 수 있다.<br>
+하지만 호출한다고 무조건 실행되는 것이 아니다.<br>
+이는 제안에 불과하고, 가비지 컬렉션은 자바 가상 기계가 전적으로 판단해 작동시킨다.<br>
+
+
+
+
+
+
+## 10. 접근 지정자
+
+
