--- a/_posts/2025-11-06-Java_Ch6.md
+++ b/_posts/2025-11-06-Java_Ch6.md
@@ -684,3 +684,111 @@ System 또는 Runtime 객체의 gc() 메소드를 호출하여<br>
 ## 10. 접근 지정자
 
 
+자바는 관련이 있는 클래스들을 한 패키지에 묶어서 관리한다.<br>
+패키지는 쉽게 말해 폴더의 개념이다.<br>
+폴더 안에 관련이 있는 것들을 모아놓는 것이다.<br>
+
+
+그럼 이렇게 만들어진 클래스나 클래스 안의 멤버들을 다른 곳에서도<br>
+사용해도 되는지, 즉 접근 가능 여부를 선언하는 지시어가 필요한데,<br>
+이 지시어가 바로 접근 지정자다.<br>
+
+
+자바에서는 private, protected, public, 접근 지정자 생략(디폴트)의<br>
+4가지 접근 지정자가 있다<br>
+
+
+### 클래스 접근 지정
+
+
+클래스 접근 지정은 public과 디폴트(접근 지정자 생략)로 나뉜다.<br>
+
+```java
+public class World{
+	.......
+}
+```
+
+
+클래스 앞에 public 지시어를 붙일 경우, 이 클래스는 패키지에 상관없이<br>
+다른 어떤 클래스에서도 접근이 허용된다. 어느곳에서든 활용이 가능하다는 뜻이다.<br>
+
+
+```java
+class Local{
+	.......
+}
+```
+
+
+접근 지정자를 생략한 클래스는 같은 패키지 내의 클래스에서만 접근할 수 있다.<br>
+클래스 자체에 접근할 수 없으면 내부 멤버에도 접근할 수 없으므로, 접근이 제한된다.<br>
+
+주의할 점은 protected 와 private는 최상위 클래스 접근 지정에 사용할 수 없다.<br>
+protected나 private를 최상위 클래스에 적용하면 외부에서 접근할 수 없어<br>
+의미가 없기 때문에, 자바에서는 문법적으로 사용할 수 없다.<br>
+
+
+```java
+//최상위 클래스
+public class A{
+	private class Aa{};
+	protected class Ab{};
+	public class Ac{};
+	class Ad{};
+}
+```
+
+
+이렇게 최상위 클래스 내에선 사용이 가능하지만,
+
+
+```java
+//최상위 클래스
+protected class A{
+
+}
+```
+
+
+또는
+
+
+```java
+//최상위 클래스
+private class A{
+
+}
+```
+
+
+와 같이 사용할 순 없다.<br>
+
+
+### 멤버 접근 지정
+
+
+멤버 접근 지정자는 private, protected, public, 접근 지정자 생략(디폴트)의<br>
+4가지가 전부 사용 가능하다.
+
+
+먼저 public 멤버는 어떤 패키지에서든 접근, 활용이 가능하다.
+
+
+private 접근 지정자는 비공개를 의미하고, private 멤버는 같은 클래스 내의<br>
+멤버들에게만 접근, 활용이 허용된다.
+
+
+protected 접근 지정자는 보호된 공개를 의미하고, protected 멤버는<br>
+같은 패키지 내의 모든 클래스들과 자식 클래스(상속)만이 접근, 활용이 허용된다.<br>
+
+
+디폴트 멤버(접근 지정자 생략)의 경우 동일한 패키지 내의 클래스들만<br>
+디폴트 멤버를 자유롭게 접근, 활용이 가능하다.<br>
+
+
+
+
+
+
+## 11. static 멤버
