--- a/_posts/2025-11-06-Java_Ch6.md
+++ b/_posts/2025-11-06-Java_Ch6.md
@@ -740,7 +740,7 @@ public class A{
 ```
 
 
-이렇게 최상위 클래스 내에선 사용이 가능하지만,
+이렇게 최상위 클래스 내부에선 사용이 가능하지만,
 
 
 ```java
@@ -968,4 +968,8 @@ class SharedClass{
 
 
 지금까지 자바의 클래스와 객체에 대해 공부해 보았다.<br>
-다음 글에서는 자바의 상속에 대해서 공부해 보겠다.
+다음 글에서는 자바의 상속에 대해서 공부해 보겠다.<br>
+
+
+---
+※ 본 글은 개인 학습을 목적으로 「명품 자바 에센셜」(황기태 지음, 생능출판)을 참고하여 작성하였습니다.
