--- a/_posts/2025-12-14-Java_Ch7.md
+++ b/_posts/2025-12-14-Java_Ch7.md
@@ -17,3 +17,136 @@ sidebar:
 
 
 # Java의 상속
+
+
+개발을 하다 보면 여러 클래스를 작성하면서 동일한 기능을 가진 메소드를<br>
+각 클래스마다 작성하게 되는 경우가 있다.<br>
+이때 해당 메소드에 문제가 발생하면 모든 클래스를 하나하나 수정해야 하므로<br>
+유지보수가 어려워진다.<br>
+
+
+이처럼 동일한 코드가 여러 클래스에 중복되는 문제를 해결하기 위해<br>
+자바에서는 상속(Inheritance)을 제공한다.<br>
+
+
+상속을 이용하면 공통 기능을 부모 클래스에 정의하고,<br>
+자식 클래스에서는 이를 재사용하거나 확장할 수 있다.<br>
+
+
+
+
+
+
+## 1. 상속 선언
+
+
+자바에서 상속 선언은 extends 키워드를 사용한다.<br>
+상속하는 클래스(부모 클래스)를 슈퍼 클래스(super class),<br>
+상속받는 클래스(자식 클래스)를 서브 클래스(sub class)라고 부른다.<br>
+
+
+```java
+class Animal{
+    String name;
+}
+
+class Dog extends Animal{
+    void bark(){
+        System.out.println(name + "멍멍");
+    }
+}
+```
+
+
+위 예제는 부모 클래스 Animal을 상속받은 자식 클래스 Dog가<br>
+부모 클래스의 필드 name 을 그대로 사용하고,<br>
+bark() 메소드를 추가로 정의한 예시이다.<br>
+
+
+```java
+class Animal{
+    String name;
+    private int age;
+
+    public int getAge(){
+        return age;
+    }
+}
+
+class Dog extends Animal{
+    void bark(){
+        System.out.println(getAge() + "살 " + name + "은 멍멍");
+    }
+}
+```
+
+
+위의 예시는 private 필드를 추가한 상속 예시이다.<br>
+자식 클래스라 하더라도 부모 클래스의 private 멤버에는 직접 접근할 수 없다.<br>
+따라서 private 필드에 접근하기 위해서는 <br>
+부모 클래스가 제공하는 메소드를 통해 간접적으로 접근해야 한다.<br>
+
+
+```java
+Dog dog = new Dog();
+
+dog.name = "바둑이";
+dog.age = 1;        //컴파일 오류 -> private 필드는 클래스 내부에서만 접근 가능
+```
+
+
+또한 객체를 통해 외부에서  private 필드를 접근하는 것도 불가능하다.<br>
+
+
+자바 상속은 다음과 같은 특징들을 가진다.<br>
+
+
+첫째, 자바에서는 클래스 다중 상속을 지원하지 않는다.<br>
+다중 상속은 여러 가지 문제점을 가지고 있기 때문이다.<br>
+
+
+둘째, 자바의 모든 클래스는 자바에서 제공하는 Object 클래스를<br>
+자동으로 상속받도록 컴파일된다. 위의 예시에서 Animal 클래스는<br>
+아무것도 상속받고 있지 않지만 컴파일러에 의해 Object 클래스를<br>
+상속받는다. Object 클래스는 슈퍼 클래스를 가지지 않는 유일한 클래스이다.<br>
+(Object 클래스의 경로명은 java.lang.Object 이다.)<br>
+
+
+
+
+
+
+## 2. 슈퍼 클래스의 디폴트 멤버에 대한 서브 클래스의 접근
+
+
+자바의 접근 지정자 4개 중 디폴트 접근 지정과 protected 접근 지정에 대해 알아보자.<br>
+
+
+### 디폴트 접근 지정
+
+
+접근 지정이 선언되어 있지 않을 때를 디폴트 접근 지정이라고 부르며,<br>
+디폴트 멤버는 동일한 패키지의 클래스들에게만 접근이 허용된다.<br>
+만약 서브 클래스가 슈퍼 클래스와 다른 패키지에 있다면,<br>
+슈퍼 클래스의 디폴트 멤버들에 접근이 불가능하다.<br>
+
+
+### protected 접근 지정
+
+
+슈퍼 클래스의 protected 멤버는 다음 두 가지 경우에 접근이 허용된다.<br>
+1. 같은 패키지에 속한 모든 클래스<br>
+2. 상속되는 서브 클래스(같은 패키지, 다른 패키지 상관 없음)<br>
+
+
+아래는 슈퍼 클래스 멤버에 대한 접근 지정을 표로 정리한 것이다.<br>
+
+
+![접근 지정 정리표](/assets/images/접근%20지정%20정리표.jpg)<br>
+
+
+
+
+
+
+## 3. 상속과 생성자
