--- a/_posts/2025-10-02-Java_Ch1.md
+++ b/_posts/2025-10-02-Java_Ch1.md
@@ -570,4 +570,8 @@ a << b      //a의 각 비트를 왼쪽으로 b번 시프트.
 
 
 지금까지 자바의 기본 문법에 대해 공부해 보았다.<br>
-다음 글에서는 자바의 조건문에 대해서 공부해 보겠다.
+다음 글에서는 자바의 조건문에 대해서 공부해 보겠다.<br>
+
+
+---
+※ 본 글은 개인 학습을 목적으로 「명품 자바 에센셜」(황기태 지음, 생능출판)을 참고하여 작성하였습니다.
