--- a/_posts/2025-10-11-Java_Ch4.md
+++ b/_posts/2025-10-11-Java_Ch4.md
@@ -438,4 +438,8 @@ int[] arr;  //레퍼런스(참조 변수)
 
 
 지금까지 자바의 배열에 대해 공부해 보았다.<br>
-다음 글에서는 자바의 예외 처리에 대해서 공부해 보겠다.
+다음 글에서는 자바의 예외 처리에 대해서 공부해 보겠다.<br>
+
+
+---
+※ 본 글은 개인 학습을 목적으로 「명품 자바 에센셜」(황기태 지음, 생능출판)을 참고하여 작성하였습니다.
