--- a/_posts/2025-12-14-Java_Ch7.md
+++ b/_posts/2025-12-14-Java_Ch7.md
@@ -532,3 +532,46 @@ Student를 상속받진 않았기 때문에 false를 반환한다.<br>
 ```java
 if(3 instanceof int)    //문법 오류
 ```
+
+
+
+
+
+
+## 5. 메소드 오버라이딩
+
+
+메소드 오버라이딩(method overriding)이란<br>
+서브 클래스에서 슈퍼 클래스에 선언된 메소드를 재정의하는 것이다.<br>
+
+
+이때, 서브 클래스에서 오버라이딩한 메소드는<br>
+
+
+● 메소드 이름<br>
+
+● 매개변수의 타입, 개수, 순서<br>
+
+● 리턴 타입<br>
+
+이 모두가 슈퍼 클래스의 메소드와 같아야 한다.<br>
+
+
+다음과 같은 부모 자식 클래스가 있다고 하자.<br>
+
+
+```java
+class A {
+    void f() {
+        System.out.println("A의 f() 호출");
+    }
+}
+
+class B extends A {
+    void f() {
+        System.out.println("B의 f() 호출");
+    }
+}
+```
+
+
