--- a/_posts/2025-12-14-Java_Ch7.md
+++ b/_posts/2025-12-14-Java_Ch7.md
@@ -568,10 +568,191 @@ class A {
 }
 
 class B extends A {
-    void f() {
+    @Override
+    void f() {  //A의 f() 오버라이딩
         System.out.println("B의 f() 호출");
     }
 }
 ```
 
 
+그리고 B b = new B()로 객체를 하나 생성한다.<br>
+이때, b 객체에는 A의 f()를 오버라이딩한 B의 f()만이 유효하며,<br>
+실행 시점에는 B의 f()만 호출된다.<br>
+
+
+오버라이딩의 목적은 다형성 실현에 있다.<br>
+
+
+```java
+class Shape {
+    public void draw() {
+        System.out.println("Shape");
+    }
+}
+
+class Line extends Shape {
+    @Override
+     public void draw() {
+        System.out.println("Line");
+    }
+}
+
+class Rect extends Shape {
+    @Override
+     public void draw() {
+        System.out.println("Rect");
+    }
+}
+
+class Circle extends Shape {
+    @Override
+     public void draw() {
+        System.out.println("Circle");
+    }
+}
+```
+
+
+위와 같이 Shape 클래스를 상속받아<br>
+부모 클래스의 draw() 메소드를 각 클래스의 특성에 맞게 재정의할 수 있다.<br>
+
+
+즉, 상속을 통해 하나의 같은 이름의 메소드에 대해<br>
+서로 다른 내용을 구현함으로써 객체 지향의 다형성을 실현할 수 있다.<br>
+
+
+### 동적 바인딩
+
+
+동적 바인딩이란 실행할 메소드를 컴파일 시점에 결정하는 것이 아니라,<br>
+실행 시점에 객체의 실제 타입을 기준으로 결정하는 것을 말한다.<br>
+
+
+자바에서는 동적 바인딩을 통해<br>
+오버라이딩된 메소드가 항상 객체의 실제 타입에 맞게 실행되도록 보장한다.<br>
+
+
+```java
+class SuperObj {
+    public void paint() {
+        draw();
+    }
+    
+    public void draw() {
+        System.out.println("Super Object");
+    }
+}
+
+class SubObj extends SuperObj {
+    @Override
+    public void draw() {
+        System.out.println("Sub Object");
+    }
+}
+```
+
+
+이렇게 두 클래스가 있을 때,
+
+
+```java
+SuperObj a = new SuperObj();
+a.paint();
+```
+
+의 결과는 SuperObj의 draw()를 호출한다.<br>
+
+
+하지만 아래의 경우는 다른 결과가 나온다.<br>
+
+
+```java
+SuperObj b = new SubObj();
+b.paint();
+```
+
+
+이 경우 paint() 메소드 자체는 SuperObj의 것이지만,<br>
+그 내부에서 호출되는 draw()는<br>
+SuperObj의 draw()를 오버라이딩한 SubObj의 draw()가 호출된다.<br>
+
+
+이는 실행 시점에 메소드가 결정되는 동적 바인딩이 일어난 결과이다.<br>
+
+
+### 오버라이딩과 super 키워드
+
+
+super 키워드는 오버라이딩된 상황에서도<br>
+슈퍼 클래스의 멤버를 명시적으로 지정하여 접근할 수 있게 해준다.<br>
+
+일반적으로 자바에서는 오버라이딩된 메소드가 동적 바인딩에 의해<br>
+객체의 실제 타입을 기준으로 호출되지만,<br>
+super를 사용하면 이러한 동적 바인딩을 우회하여<br>
+슈퍼 클래스의 메소드를 직접 호출할 수 있다.<br>
+
+super는 자바에서 자동으로 제공되는 슈퍼 클래스에 대한 참조이며,<br>
+필드와 메소드 모두에 접근할 수 있다.<br>
+
+
+```java
+class SuperObj {
+    protected String name;
+
+    public void paint() {
+        draw();
+    }
+    
+    public void draw() {
+        System.out.println(name);
+    }
+}
+
+public class SubObj extends SuperObj {
+    protected String name;
+
+    @Override
+    public void draw() {
+        name ="Sub";    //SubObj의 name
+        super.name = "Super";   //SuperObj의 name
+        super.draw();   //SuperObj의 draw() -> 정적 바인딩
+        System.out.println(name);   //SubObj의 name 출력
+    }
+
+    public static void main(String [] args) {
+        SuperObj b = new SubObj();
+
+        b.paint();
+    }
+}
+```
+
+
+결과적으로 위 코드의 실행결과는
+
+
+```java
+Super
+Sub
+```
+
+
+이 된다.<br>
+
+
+### 오버라이딩(Overriding)과 오버로딩(Overloading)
+
+
+오버라이딩은 슈퍼 클래스에 선언된 메소드를<br>
+서브 클래스에서 재정의하는 것을 말한다.<br>
+
+오버로딩은 한 클래스 내에서<br>
+매개변수의 타입, 개수, 순서가 다른 메소드를<br>
+같은 이름으로 여러 개 정의하는 것을 말한다.<br>
+
+
+아래 표는 둘의 차이점을 정리한 것이다.<br>
+
+
+![오버라이딩 오버로딩 차이점](/assets/images/오버라이딩%20오버로딩%20차이.jpg)<br>
