--- a/_posts/2025-12-14-Java_Ch7.md
+++ b/_posts/2025-12-14-Java_Ch7.md
@@ -756,3 +756,216 @@ Sub
 
 
 ![오버라이딩 오버로딩 차이점](/assets/images/오버라이딩%20오버로딩%20차이.jpg)<br>
+
+
+
+
+
+
+## 6. 추상 클래스(Abstract class)
+
+
+추상 메소드(abstract method)는 다음과 같이 abstract 키워드와 함께 원형만 선언되고,<br>
+코드는 작성되지 않은 메소드이다.<br>
+
+
+```java
+abstract public String getName();   //추상 메소드
+```
+
+
+추상 클래스란 추상 메소드를 가질 수 있는 클래스이다.<br>
+추상 클래스는 abstratct 키워드로 선언한다.<br>
+
+
+### 추상 클래스 선언
+
+
+추상 클래스는 추상 메소드를 한 개 이상 가지고 선언될 수 있고,<br>
+추상 메소드 없이 선언될 수도 있다.<br>
+
+
+하지만 추상 메소드를 가진 클래스는 반드시 추상 클래스로 선언되어야 하며,<br>
+상속 받은 클래스가 일반 클래스라면 모든 추상 메소드를 구현해야 한다.<br>
+
+
+다음은 여러 가지 경우의 예시이다.<br>
+
+
+```java
+//추상 메소드를 가진 추상 클래스
+abstract class Shape {
+    public Shape() { ... }
+    public void edit() { ... }
+
+    abstract public void draw();    //추상 메소드 선언
+}
+
+//추상 메소드가 없는 추상 클래스
+abstract class JComponent {
+    String name;
+
+    public void load(String name) {
+        this.name = name;
+    }
+}
+
+//추상 클래스의 상속
+abstract class A {
+    abstract public int add(int x, int y);  //추상 메소드
+}
+
+abstract class B extends A {    //추상 클래스 -> 추상 메소드 구현 필요 없음
+    public void show() {
+        System.out.println("B");
+    }
+}
+
+class C extends A {     //일반 클래스 -> 추상 메소드를 구현해야 함
+    @Override
+    public int add(int x, int y) {
+        return x + y;
+    }
+}
+```
+
+
+여기서 중요한 점은, 클래스 A를 상속받은 B와 C의 차이점이다.<br>
+B는 추상 클래스로 선언되었기 때문에 A의 add() 메소드를 구현하지 않아도 된다.<br>
+하지만 C는 정상 클래스로 선언되었기 때문에 반드시 A의 add() 메소드를 구현해야 한다.<br>
+
+
+또한 추상 클래스는 인스턴스(객체)를 생성할 수 없다.<br>
+실행 코드가 없는 미완성 상태의 추상 메소드가 존재할 수 있기 때문이다.<br>
+따라서 A와 B는 인스턴스(객체)를 생성할 수 없지만, C는 생성이 가능하다.<br>
+
+
+### 추상 클래스의 목적
+
+
+추상 클래스는 인스턴스(객체) 생성을 목적으로 하지 않으며,<br>
+상속을 위한 슈퍼 클래스로 활용된다.<br>
+추상 클래스는 추상 메소드를 통해 서브 클래스가 구현해야 할<br>
+메소드의 원형을 정의함으로써 구현 규칙을 제시하고,<br>
+서브 클래스의 다형성을 실현한다.<br>
+
+
+
+
+
+
+## 7. 인터페이스(Interface)
+
+
+자바에서 인터페이스란, 클래스가 반드시 구현해야 할 메소드의 규격을 정의하여<br>
+소프트웨어를 규격화된 모듈로 만드는 것이다.<br>
+
+
+### 인터페이스 선언과 상속
+
+
+자바의 인터페이스는 다음과 같이 interface 키워드를 사용하여 작성한다.<br>
+
+
+```java
+interface PhoneInterface {  //인터페이스 선언
+    public static final int TIMEOUT = 10000;    //상수 필드 -> public static final 생략 가능
+    public abstract void sendCall();            //추상 메소드 -> public abstract 생략 가능
+    public abstract void receiveCall();         //추상 메소드 -> public abstract 생략 가능
+    public default void printLogo() {           //default 메소드 -> public 생략 가능
+        System.out.println("*** Phone ***");
+    }
+}
+```
+
+
+인터페이스는 5종류의 멤버로 구성되며,<br>
+일반적인 필드(인스턴스 변수)는 선언할 수 없다.<br>
+
+1. 상수 -> public static final 속성, 속성 생략 가능
+
+2. 추상 메소드 -> 속성이 public abstract로 정해져 있음, 생략 가능
+
+3. default 메소드 -> (Java 8부터)의 접근 지정은 public으로 고정
+
+4. private 메소드 -> (Java 9부터)는 인터페이스 내의 다른 메소드에서만 호출 가능
+
+5. static 메소드 -> (Java 9부터) 접근 지정 생략 시 public이며 private로 지정 가능
+
+
+default, private, static 메소드는 반드시 메소드 구현을 가져야 한다.<br>
+
+
+인터페이스는 객체를 생성할 수 없으며,<br>
+다른 인터페이스를 상속하는 것이 가능하다.<br>
+상속을 통해 기존 인터페이스에 새로운 규격을 추가할 수 있으며,<br>
+클래스 상속과 마찬가지로 extends 키워드를 사용한다.<br>
+
+
+다음은 인터페이스 상속의 예시이다.<br>
+
+
+```java
+interface MobilePhoneInterface extends PhoneInterface {
+    void sendSMS();     //추상 메소드
+    void receiveSMS();  //추상 메소드
+}
+```
+
+
+MobilePhoneInterface는 PhoneInterface의 멤버를 모두 상속받아<br>
+총 6개의 멤버를 가지게 된다.<br>
+
+
+또한 인터페이스는 다음과 같이 콤마(,)로 연결하여 2개 이상의 인터페이스를 다중 상속할 수 있다.<br>
+
+
+```java
+interface MusicPhoneInterface extends PhoneInterface, MP3Interface {
+    .......
+}
+```
+
+
+### 인터페이스 구현
+
+
+인터페이스 구현이란 인터페이스의 모든 추상 메소드를 구현한 클래스를 작성하는 것을 말한다.<br>
+implements 키워드를 사용한다.<br>
+
+
+다음은 PhoneInterface를 구현한 SamsungPhone 클래스를 작성한 예시이다.<br>
+
+
+```java
+class SamsungPhone implements PhoneInterface {
+    //추상 메소드 구현
+    public void sendCall() {
+        System.out.println("전화를 거는 중입니다.");
+    }
+
+    public void receiveCall() {
+        System.out.println("전화가 왔습니다.");
+    }
+
+    //추가 메소드 작성
+    public void flash() {
+        System.out.println("불이 켜졌습니다.");
+    }
+}
+```
+
+
+PhoneInterface의 추상 메소드는 반드시 구현해야 하며,<br>
+default 메소드는 구현하지 않아도 그대로 상속받아 사용할 수 있다.<br>
+
+
+-----------------------------------------------------------------------<br>
+
+
+지금까지 자바의 상속 대해 공부해 보았다.<br>
+다음 글에서는 자바의 모듈과 패키지, 그리고 패키지 활용에 대해서 공부해 보겠다.<br>
+
+
+---
+※ 본 글은 개인 학습을 목적으로 「명품 자바 에센셜」(황기태 지음, 생능출판)을 참고하여 작성하였습니다.
