--- a/_posts/2025-12-14-Java_Ch7.md
+++ b/_posts/2025-12-14-Java_Ch7.md
@@ -917,7 +917,8 @@ MobilePhoneInterface는 PhoneInterface의 멤버를 모두 상속받아<br>
 총 6개의 멤버를 가지게 된다.<br>
 
 
-또한 인터페이스는 다음과 같이 콤마(,)로 연결하여 2개 이상의 인터페이스를 다중 상속할 수 있다.<br>
+또한 인터페이스는 다음과 같이 콤마(,)로 연결하여<br>
+2개 이상의 인터페이스를 다중 상속할 수 있다.<br>
 
 
 ```java
@@ -930,7 +931,8 @@ interface MusicPhoneInterface extends PhoneInterface, MP3Interface {
 ### 인터페이스 구현
 
 
-인터페이스 구현이란 인터페이스의 모든 추상 메소드를 구현한 클래스를 작성하는 것을 말한다.<br>
+인터페이스 구현이란 인터페이스의 모든 추상 메소드를<br> 
+구현한 클래스를 작성하는 것을 말한다.<br>
 implements 키워드를 사용한다.<br>
 
 
