--- a/_posts/2025-12-26-Java_Ch8.md
+++ b/_posts/2025-12-26-Java_Ch8.md
@@ -17,3 +17,300 @@ sidebar:
 
 
 # Java의 모듈과 패키지
+
+
+자바에서 패키지(package)란 서로 관련 있는 클래스나<br>
+인터페이스의 컴파일된 클래스 파일들을<br>
+하나의 디렉터리에 모아 놓은 것이다.<br>
+
+
+그리고 모듈(module) 은 이러한 패키지들을<br>
+여러 개 묶어 관리하는 단위이다.<br>
+
+
+2017년 9월, Java 9 에서 모듈 개념이 새롭게 도입되었으며,<br>
+자바 플랫폼에서 제공하는 수많은 패키지들을<br>
+수십 개의 모듈로 나누어 제공하기 시작했다.<br>
+
+
+각 모듈은 JDK 설치 디렉터리 하위의 jmods 디렉터리에<br>
+.jmod 확장자를 가진 ZIP 압축 파일 형태로 저장되어 있다.<br>
+
+
+
+
+
+
+## 1. 패키지 사용
+
+
+개발 시 자주 사용하는 Scanner 클래스는<br>
+java.base 모듈에 포함된 java.util 패키지에 존재한다.<br>
+
+
+자바에서 다른 패키지에 있는 클래스를 사용하려면,<br>
+패키지명을 포함한 완전한 경로명을 사용하여<br>
+컴파일러가 해당 클래스의 위치를<br> 
+찾을 수 있도록 해야 한다.<br>
+
+
+다음 예시는 완전한 경로명을 사용하여<br>
+Scanner 클래스를 사용하는 코드이다.<br>
+
+
+```java
+public class ImportEx {
+    public static void main(String[] args) {
+        java.util.Scanner sc = new java.util.Scanner(System.in);
+        System.out.println(sc.next());
+    }
+}
+```
+
+
+하지만 매번 완전한 경로명을 사용하는 것은 번거롭고,<br>
+타이핑 실수가 발생할 가능성도 있다.<br>
+이를 해결하기 위해 import 문을 사용한다.<br>
+
+
+import 문은 다음과 같은 두 가지 방법으로 사용할 수 있다.<br>
+
+
+1. 사용할 클래스마다 완전한 경로명을 지정하는 방법<br>
+
+
+```java
+import 패키지.클래스;
+```
+
+
+2. *을 사용하여 해당 패키지의 클래스를 한 번에 선언하는 방법<br>
+
+
+```java
+import 패키지.*;
+```
+
+
+다음은 위의 두 가지 방법을 적용하여<br>
+앞서 작성한 예제 코드를 수정한 것이다.<br>
+
+
+```java
+//1번 방법
+import java.util.Scanner;
+public class ImportEx {
+    public static void main(String [] args) {
+        Scanner sc = new Scanner(System.in);
+        System.out.println(sc.next());
+    }
+}
+
+//2번 방법
+import java.util.*;
+public class ImportEx {
+    public static void main(String [] args) {
+        Scanner sc = new Scanner(System.in);
+        System.out.println(sc.next());
+    }
+}
+```
+
+
+
+
+
+
+## 2. 패키지 만들기
+
+
+클래스나 인터페이스가 컴파일되면 클래스 파일이 생성되는데,<br>
+이 클래스 파일은 반드시 어떤 패키지에 소속되어야 한다.<br>
+
+
+따라서 클래스 파일에는 다음과 같이<br>
+package 키워드를 사용하여<br>
+해당 클래스가 소속될 패키지명을 선언해야 한다.<br>
+
+
+```java
+package 패키지명;
+```
+
+
+하지만 실제 개발 환경에서는<br>
+패키지를 생성하고 클래스 파일을 만드는 과정에서<br>
+대부분의 작업을 개발 도구(IDE)가 자동으로 처리해 준다.<br>
+
+
+이제 다음 예제 프로젝트를<br>
+두 개의 패키지로 분리해 보자.<br>
+
+
+```java
+abstract class Calculator {
+    public abstract int add(int a, int b);
+    public abstract int subtract(int a, int b);
+    public abstract double average(int[] a);
+}
+
+public class GoodCalc extends Calculator {
+    public int add(int a, int b) {
+        return a + b;
+    }
+
+     public int subtract(int a, int b) {
+        return a - b;
+     }
+
+     public double average(int[] a) {
+        double sum = 0;
+
+        for(int i = 0; i < a.length; i++) {
+            sum += a[i];
+        }
+
+        return sum / a.length;
+     }
+
+     public static void main(String [] args) {
+        Calculator c = new GoodCalc();
+
+        System.out.println(c.add(2,3));
+        System.out.println(c.subtract(2,3));
+        System.out.println(c.average(new int [] { 2, 3, 4}));
+     }
+}
+```
+
+
+먼저 프로젝트 하위에<br>
+lib 패키지와 app 패키지를 생성한다.<br>
+
+
+lib 패키지에는 Calculator 클래스를 작성하고,<br>
+app 패키지에는 GoodCalc 클래스를 작성한다.<br>
+
+
+```java
+package lib; // Calculator.java를 컴파일하면 Calculator.class가 lib 폴더에 저장된다.
+
+public abstract class Calculator {
+    public abstract int add(int a, int b);
+    public abstract int subtract(int a, int b);
+    public abstract double average(int[] a);
+}
+```
+
+
+```java
+package app;
+import lib.Calculator;  // GoodCalc 클래스에서 Calculator를 사용하기 위해 import
+
+public class GoodCalc extends Calculator {
+    public int add(int a, int b) {
+        return a + b;
+    }
+
+     public int subtract(int a, int b) {
+        return a - b;
+     }
+
+     public double average(int[] a) {
+        double sum = 0;
+
+        for(int i = 0; i < a.length; i++) {
+            sum += a[i];
+        }
+
+        return sum / a.length;
+     }
+
+     public static void main(String [] args) {
+        Calculator c = new GoodCalc();
+
+        System.out.println(c.add(2,3));
+        System.out.println(c.subtract(2,3));
+        System.out.println(c.average(new int [] { 2, 3, 4}));
+     }
+}
+```
+
+
+마지막으로 중요한 점은,<br>
+lib 패키지에 포함된 Calculator 클래스가<br>
+다른 패키지에서 사용되기 위해서는<br>
+접근 지정자를 public으로 선언해야 한다는 것이다.<br>
+
+
+
+
+
+
+## 3. 모듈
+
+
+모듈은 앞서 설명했듯이 Java 9부터 도입된 개념으로,<br>
+여러 개의 패키지를 하나로 묶은 상위 단위이다.<br>
+
+
+모듈은 단순히 패키지를 묶는 것뿐만 아니라,<br>
+의존성 정보와 접근 제어 정보를 함께 관리한다.<br>
+
+
+모듈 도입에 대한 Oracle 공식 목적은 다음과 같다.<br>
+
+1. 의존성을 명확하게 관리하기 위해
+
+2. 내부 API를 강하게 캡슐화하기 위해
+
+3. Java SE 플랫폼을 모듈 단위로 분리하기 위해
+
+
+모듈은 module-info.java라는 선언 파일로 정의되며,<br>
+이 파일은 모듈의 설계 계약서 역할을 한다.<br>
+
+
+```java
+module 모듈명 {
+    requires 다른모듈;
+    exports 패키지명;
+}
+```
+
+requires는 해당 모듈이 의존하는 다른 모듈을 선언하는 키워드이다.<br>
+모듈은 requires로 선언된 모듈에 대해서만 접근할 수 있다.<br>
+
+
+또한 public 클래스라 하더라도,<br>
+exports되지 않은 패키지에 포함되어 있다면<br>
+다른 모듈에서는 접근할 수 없다.<br>
+
+
+이를 통해 모듈은 공개 API와 내부 구현을 명확히 분리한다.<br>
+
+
+exports는 외부에 공개할 패키지를 지정하는 역할을 한다.<br>
+exports로 선언된 패키지에 포함된<br>
+public 타입만 다른 모듈에서 사용할 수 있다.<br>
+
+
+모듈 중에서도 반드시 알아야 할 기본 모듈은<br>
+java.base 모듈이다.<br>
+
+
+java.base 모듈은 java.base.jmod 파일에 포함되어 있으며,<br>
+java.lang, java.util 등<br>
+자바 응용 프로그램에서 가장 많이 사용되는<br>
+기본 패키지와 클래스들을 제공한다.<br>
+
+
+또한 java.base 모듈은<br>
+모든 자바 프로그램에 자동으로 포함되므로,<br>
+별도로 requires java.base;를 선언할 필요는 없다.<br>
+
+
+
+
+
+## 4. 자바 JDK에서 제공하는 패키지
