--- a/_posts/2025-12-26-Java_Ch8.md
+++ b/_posts/2025-12-26-Java_Ch8.md
@@ -314,3 +314,336 @@ java.lang, java.util 등<br>
 
 
 ## 4. 자바 JDK에서 제공하는 패키지
+
+
+자바 개발 도구인 JDK(Java Development Kit)는<br>
+화면 출력, 키 입력, 네트워킹 등 프로그램 개발에 필요한<br>
+기본적인 기능과 다양한 응용 기능을 구현한 많은 클래스와<br>
+인터페이스들을 포함하는 표준 패키지들을 제공한다.<br>
+이를 자바 API라고 한다.<br>
+
+
+자바의 표준 패키지는 모듈로 나누어져,<br>
+JDK가 설치된 디렉터리 밑의 jmods 디렉터리에<br>
+압축 파일 형태로 담겨져 있다<br>
+
+
+이 중 주요 패키지를 정리하면 다음과 같다.<br>
+
+- java.lang -> System을 비롯하여 문자열, 수학 함수, 입출력 등<br>
+자바 프로그래밍에 필요한 기본적인 클래스와 인터페이스를 제공한다.<br>
+이 패키지의 클래스들은 import 문을 작성하지 않아도 자동 import 된다.<br>
+
+
+- java.util -> 날짜, 시간, 벡터, 해시맵 등 유틸리티 클래스와 인터페이스를 제공한다.<br>
+
+
+- java.io -> 키보드, 모니터, 프린터 등의 입출력 클래스와 인터페이스를 제공한다.<br>
+
+
+- java.awt -> GUI 프로그래밍에 필요한 AWT 클래스와 인터페이스를 제공한다.<br>
+
+
+- java.swing -> 스윙 GUI 프로그래밍에 필요한 클래스와 인터페이스를 제공한다.<br>
+
+
+
+
+
+## 5. Object 클래스
+
+
+Object 클래스는 java.lang 패키지에 속한<br>
+자바 클래스 계층 구조의 최상위 클래스이다.<br>
+모든 클래스는 강제로 Object 클래스를 상속 받으며,<br>
+Object 클래스는 아무 클래스도 상속받지 않는다.<br>
+
+
+다음은 Object 클래스의 주요 메소드들이다.<br>
+
+
+### 1. int hashCode()
+
+객체의 해시 코드 값을 제공한다.<br>
+해시 코드 값은 객체가 생성될 때 할당받는 고유한 정수 값이다.<br>
+
+
+### 2. Class getClass()
+
+객체의 클래스 정보를 담은 Class 객체를 리턴한다.<br>
+
+
+### 3. String getName()
+
+객체의 클래스 명을 리턴한다.<br>
+
+
+### 4. String toString()
+
+객체를 문자열로 변환한다.<br>
+각 클래스는 toString()을 오버라이딩하여<br>
+자신만의 문자열을 리턴할 수 있다.<br>
+(public으로 선언해야 함을 주의)<br>
+
+
+### 5. boolean equals(Object obj)
+
+객체를 비교한다.
+== 연산자는 객체의 레퍼런스 값을 비교하는 반면,<br>
+equals() 메소드는 객체의 내용을 비교한다.<br>
+두 객체가 동일한지를 비교하려면,<br>
+해당 클래스에서 equals() 메소드를 재정의해야 한다.<br>
+
+
+### 6. void notify()
+
+현 객체에 대해 대기하고 있는 하나의 스레드를 깨운다.<br>
+
+
+### 7. void notifyAll()
+
+현 객체에 대해 대기하고 있는 모든 스레드를 깨운다.<br>
+
+
+### 8. void wait()
+
+다른 스레드가 깨울 때까지 현재 스레드를 대기하게 한다.<br>
+
+
+실제 사용은 다음과 같다.<br>
+
+
+```java
+class Point {
+    private int x, y;
+
+    public Point(int x, int y) {
+        this.x = x;
+        this. y = y;
+    }
+
+    @Override
+    public String toString() {
+        return "Point(" + x + ", " + y + ")";
+    }
+
+    @Override
+    public boolean equals(Object obj) {
+        Point p = (Point)obj;   // obj를 Point 타입으로 다운캐스팅
+
+        if(x == p.x && y == p.y) {
+            return true;
+        }
+        else {
+            return false;
+        }
+    }
+}
+
+public class ObjectEx {
+    public static void main(String [] args) {
+        Point a = new Point(2, 3);
+        Point b = new Point(3, 4);
+
+        System.out.println(a.hashCode());   // 해시 코드 값
+        System.out.println(a.getClass().getName()); // 클래스 이름
+        System.out.println(a.toString());   // 객체의 문자열
+
+        if(a.equals(b)) {
+             System.out.println("a = b");
+        }
+    }
+}
+```
+
+
+실행 결과는 다음과 같다.<br>
+
+
+```java
+22279806    // 해시 코드의 16진수 값 -> 실행 시마다 달라질 수 있음
+Point       // 클래스 이름
+Point(2, 3) // 객체의 문자열 리턴값
+a = b      // equals() 메소드 실행 결과
+```
+
+
+
+
+
+## 6. Wrapper 클래스
+
+
+Wrapper라는 이름의 클래스는 존재하지 않는다.<br>
+다만 8개의 기본 타입을 객체로 다루기 위해<br>
+8개 클래스들을 통칭하여 Wrapper 클래스라고 말한다.<br>
+
+
+![Wrapper 클래스](/assets/images/Wrapper.png)<br>
+
+
+자바는 객체 지향 언어이기 때문에,<br>
+기본적으로 객체를 대상으로 처리하는 경우가 많다.<br>
+JDK의 많은 클래스들 또한 객체만을 다루기 때문에,<br>
+기본 타입 값을 객체로 만들어 사용할 수 있게 하는 것이<br>
+바로 Wrapper 클래스이다.<br>
+
+
+8개의 Wrapper 클래스들의 사용법은 거의 비슷하다.<br>
+다음은 Wrapper 클래스의 객체 생성 예시이다.<br>
+
+
+```java
+Integer i = Integer.valueOf(10);         // 정수 10의 객체화
+Character c = Character.valueOf('c');    // 문자 'c'의 객체화
+Boolean b = Boolean.valueOf(true);       // 불린 값 true의 객체화
+```
+
+
+또한 Character를 제외한 나머지는 문자열로 객체 생성이 가능하다.<br>
+
+
+```java
+Integer i = Integer.valueOf("10");
+Boolean b = Boolean.valueOf("false");
+```
+
+
+추가로, 위의 객체 생성 방법은 Java 9부터 도입되었다.<br>
+이전의 new Integer() 방식은 더 나은 메모리 효율과<br>
+빠른 속도를 위해 폐기되었다.<br>
+
+
+Wrapper 클래스에는 기본 타입 값을 문자열로 변환하거나<br>
+문자열을 기본 타입 값으로 변환하는 메소드들이 주를 이룬다.<br>
+많이 사용되는 Integer 클래스의 주요 메소드들은 다음과 같다.<br>
+추가로 많은 메소드들이 static 타입이다.<br>
+
+
+### 1. static int bitCount(int i)
+
+정수 i의 이진수 표현에서 1의 개수를 리턴한다.<br>
+
+
+### 2. double doubleValue()
+
+double 타입으로 값을 리턴한다.<br>
+
+
+### 3. int intValue()
+
+int 타입으로 값을 리턴한다.<br>
+
+
+### 4. static int parseInt(String s)
+
+문자열 s를 10진 정수로 변환한 값을 리턴한다.<br>
+
+
+### 5. static int parseInt(String s, int radix)
+
+문자열 s를 지정된 진법의 정수로 변환한 값을 리턴한다.<br>
+
+
+### 6. static String toBinaryString(int i)
+
+정수 i를 이진수 표현으로 변환한 문자열을 리턴한다.<br>
+
+
+### 7. static String toHexString(int i)
+
+정수 i를 16진수 표현으로 변환한 문자열을 리턴한다.<br>
+
+
+### 8. static String toString(int i)
+
+정수 i를 문자열로 변환하여 리턴한다.<br>
+
+
+다음은 다양한 Wrapper 클래스의 활용 예시이다.<br>
+
+
+```java
+public class WrapperEx {
+    public static void main(String [] args) {
+        // Character 사용
+         System.out.println(Character.toLowerCase('A'));    // 'A' 를 소문자로 변환
+
+         char c1 = '3'; 
+         char c2 = 'D';
+
+         if(Character.isDigit(c1)) {    // 문자 c1이 숫자이면 true
+             System.out.println(c1 + "은 숫자");
+         }
+
+         if(Character.isAlphabetic(c2)) {   // 문자 c2가 영문자이면 true
+             System.out.println(c2 + "는 영문자");
+         }
+
+         // Integer 사용
+         System.out.println(Integer.parseInt("33"));    // 문자열 "33"을 10진수로 변환
+         System.out.println(Integer.toString(33));      // 정수 33을 문자열로 변환
+         System.out.println(Integer.toBinaryString(33)); // 33을 이진수 문자열로 변환
+         System.out.println(Integer.bitCount(33));       // 33에 대한 이진수의 1의 개수
+
+         Integer i = Integer.valueOf(33);
+         System.out.println(i.doubleValue());    // 정수 33을 double 값으로 변환 -> 33.0
+
+         // Double 사용
+         Double d = Double.valueOf(3.14);
+         
+         System.out.println(d.toString());  // Double을 문자열 "3.14"로 변환
+         System.out.println(Double.parseDouble("3.14"));  // 문자열을 실수 3.14로 변환
+
+         // Boolean 사용
+         boolean b = (4>3); // b는 true
+
+         System.out.println(Boolean.toString(b));  // true를 문자열 "true"로 변환
+         System.out.println(Boolean.parseBoolean("false")); // 문자열을 false로 변환
+    }
+}
+```
+
+
+실행 결과는 다음과 같다.<br>
+
+
+```java
+a                // 'A'를 소문자로 변환
+3은 숫자         // '3'은 숫자
+D는 영문자       // 'D'는 영문자
+33              // 문자열 "33"을 10진수로 변환
+33              // 정수 33을 문자열로 변환
+100001          // 33을 이진수 문자열로 변환
+2               // 33에 대한 2진수의 1의 개수
+33.0            // 정수 33을 double 값으로 변환 -> 33.0
+3.14            // Double을 문자열 "3.14"로 변환
+3.14            // 문자열을 실수 3.14로 변환
+true            // true를 문자열 "true"로 변환
+false           // 문자열을 false로 변환
+```
+
+
+### 박싱과 언박싱
+
+
+기본 타입의 값을 Wrapper 객체로 변환하는 것을 박싱(boxing),<br>
+반대의 경우를 언박싱(unboxing)이라고 한다.<br>
+
+
+```java
+Integer ten = Integer.valueOf(10);  // 박싱
+int n = ten.intValue(); // 언박싱
+```
+
+
+JDK 1.5부터 박싱과 언박싱은 자동으로 이루어지며,<br>
+이를 자동 박싱(auto boxing),<br>
+자동 언박싱(auto unboxing)이라고 부른다.<br>
+위의 코드를 이를 이용해 다음과 같이 간단하게 작성할 수 있다.<br>
+
+
+```java
+Integer ten = 10;   // 자동 박싱, Integer ten = Integer.valueOf(10); 과 동일
+int n = ten;    //자동 언박싱, int n = ten.intValue(); 과 동일
+```
