--- a/_posts/2025-12-26-Java_Ch8.md
+++ b/_posts/2025-12-26-Java_Ch8.md
@@ -647,3 +647,254 @@ JDK 1.5부터 박싱과 언박싱은 자동으로 이루어지며,<br>
 Integer ten = 10;   // 자동 박싱, Integer ten = Integer.valueOf(10); 과 동일
 int n = ten;    // 자동 언박싱, int n = ten.intValue(); 과 동일
 ```
+
+
+
+
+
+## 7. String과 StringBuffer 클래스
+
+
+String 클래스는 문자열을 나타내며,<br>
+String 리터럴은 String 객체로 처리된다.<br>
+String 객체는 다음과 같이 생성할 수 있다.<br>
+
+
+```java
+String str1 = "abcd";   // String 리터럴로 String 객체 생성
+char data[] = {'a', 'b', 'c', 'd'};
+String str2 = new String(data);
+String str3 = new String("abcd");   // str2, str3는 모두 "abcd" 문자열
+```
+
+
+하지만 리터럴로 생성된 String과<br>
+new String()으로 생성된 String은 서로 다르게 관리된다.<br>
+
+
+String 리터럴은 자바 내부에서 리터럴 테이블로<br>
+특별히 관리하여, 동일한 리터럴은 하나의 객체를 공유한다.<br>
+그러나 new String()에 의해 생성된 String은<br>
+힙 메모리에 별도로 생성된다.<br>
+
+
+```java
+String a = "Hello";
+String b = "Java";
+String c = "Hello";
+
+String d = new String("Hello");
+String e = new String("Java");
+String f = new String("Java");
+```
+
+
+위와 같은 코드가 있다고 할 때,<br>
+
+
+a와 c는 String 리터럴 테이블에 있는 "Hello"를 공유하지만,<br>
+d, e, f는 힙 메모리에 생성된 각각의 String을 가리킨다.<br>
+
+
+### String 객체의 수정
+
+
+String 리터럴로 생성되었든, new String()으로 생성되었든<br>
+일단 생성된 String 객체는 수정이 불가능하다.<br>
+따라서 리터럴로 만들어진 String 객체를<br>
+여러 변수가 공유하더라도 값 변경으로 인한 문제가 발생하지 않는다.<br>
+
+
+```java
+String s = new String("Hello"); // s는 수정이 불가
+String t = s.concat("Java");    // s에 "Java"를 덧붙인 String 리턴
+```
+
+
+위 코드에선 s와 t가 각각 "Hello", "HelloJava"를 가리킨다.<br>
+만약 concat()으로 s를 변경하고 싶다면 다음과 같이 하면 된다.<br>
+
+
+```java
+s = s.concat("Java");
+```
+
+
+이러면 s는 s.concat("Java"); 가 리턴한<br>
+새로운 문자열 "HelloJava"를 가리킨다.<br>
+
+
+아래는 String 클래스의 주요 메소드들이다.<br>
+
+
+### 1. char charAt(int index)
+
+index 인덱스에 있는 문자 값을 리턴한다.<br>
+
+
+### 2. int compareTo(String anotherString)
+
+두 String을 사전적 순서를 기준으로 비교한다.<br>
+두 String이 같으면 0,<br>
+현재 String이 anotherString보다 먼저 나오면 음수,<br>
+반대의 경우 양수를 리턴한다.<br>
+
+
+### 3. String concat(String str)
+
+str String을 현재 String에 덧붙인 새로운 String을 리턴한다.<br>
+
+
+### 4. boolean contains(CharSequence s)
+
+s에 지정된 문자들을 포함하고 있으면 true를 리턴한다.<br>
+
+
+### 5. int length()
+
+String의 길이(문자 개수)를 리턴한다.<br>
+
+
+### 6. String replace(CharSequence target, CharSequence replacement)
+
+target이 지정하는 일련의 문자들을<br>
+replacement가 지정하는 문자들로 변경한 String을 리턴한다.<br>
+
+
+### 7. String[] split(String regex)
+
+정규식 regex에 일치하는 부분을 중심으로<br>
+String을 분리하고, 배열에 저장하여 리턴한다.<br>
+
+
+### 8. String substring(int beginIndex)
+
+beginIndex 인덱스부터 시작하는 서브 String을 리턴한다.<br>
+
+
+### 9. String toLowerCase()
+
+소문자로 변경한 String을 리턴한다.<br>
+
+
+### 10. String toUpperCase()
+
+대문자로 변경한 String을 리턴한다.<br>
+
+
+### 11. String trim()
+
+String 앞뒤의 공백 문자들을 제거한 String을 리턴한다.<br>
+
+
+눈여겨볼 부분은 String 비교 시 == 연산자를 사용하면 안 된다는 점이다.<br>
+대신 compareTo() 메소드와 equals() 메소드를 사용한다.<br>
+equals() 메소드는 String이 같으면 true, 아니면 false를 리턴한다.<br>
+
+
+다음은 다양한 String 클래스 메소드들의 사용 예시이다.<br>
+
+
+```java
+public class StringEx {
+    public static void main(String[] args) {
+		String a = new String(" Hello@");   // 문자열 길이(문자 개수)
+		String b = new String("Java");  // 문자열의 포함 관계
+
+		System.out.println(a + "의 길이는 " + a.length());
+		System.out.println(a.contains("@"));
+
+		a = a.concat(b);    // 문자열 연결
+		System.out.println(a);
+
+		a = a.trim();   // 문자열 앞뒤 공백 제거
+		System.out.println(a);
+
+		a = a.replace("Java", "World"); // 문자열 대치
+		System.out.println(a);
+
+		String s[] = a.split("@");  // 문자열 분리
+		for (int i = 0; i < s.length; i++) {
+			System.out.println("분리된 문자열" + i + ":" + s[i]);
+		}
+
+		a = a.substring(6); // 인덱스 6부터 끝까지 서브 String 리턴
+		System.out.println(a);
+
+		char c = a.charAt(2);   // 인덱스 2의 문자 리턴
+		System.out.println(c);
+	}
+}
+```
+
+
+실행 결과는 다음과 같다.<br>
+
+
+```java
+ Hello@의 길이는 7
+true
+ Hello@Java
+Hello@Java
+Hello@World
+분리된 문자열0:Hello
+분리된 문자열1:World
+World
+r
+```
+
+
+### StringBuffer 클래스
+
+
+StringBuffer 클래스는 String을 다루는 클래스로서,<br>
+내부에 가변 크기의 버퍼를 가지고 문자의 개수에 따라<br>
+버퍼 크기를 자동으로 조절한다.<br>
+
+
+그러므로 String 객체와 달리, 생성된 String의 수정이 가능하다.<br>
+StringBuffer 클래스의 객체는 다음과 같이 생성한다.<br>
+
+
+```java
+StringBuffer sb = new StringBuffer("Java"); 
+```
+
+
+String이 길거나 String 작업이 많은 경우,<br>
+String 클래스보다 StringBuffer 클래스를 이용하는 것이 적합하다.<br>
+다음은 StringBuffer 클래스의 활용 예시이다.<br>
+
+
+```java
+public class StringBufferEx {
+    public static void main(String[] args) {
+		StringBuffer sb = new StringBuffer("Hello");
+		sb.append(" World!");
+		System.out.println(sb);
+		sb.insert(5, "@");
+		System.out.println(sb);
+		sb.replace(6, 12,"Java");
+		System.out.println(sb);
+	}
+}
+```
+
+
+실행 결과는 다음과 같다.<br>
+
+
+```java
+Hello World!
+Hello@ World!
+Hello@Java!
+```
+
+
+
+
+
+
+## 8. StringTokenizer 클래스
+
+
