--- a/_posts/2025-12-26-Java_Ch8.md
+++ b/_posts/2025-12-26-Java_Ch8.md
@@ -847,7 +847,7 @@ r
 ### StringBuffer 클래스
 
 
-StringBuffer 클래스는 String을 다루는 클래스로서,<br>
+StringBuffer 클래스는 문자열을 다루는 클래스로서,<br>
 내부에 가변 크기의 버퍼를 가지고 문자의 개수에 따라<br>
 버퍼 크기를 자동으로 조절한다.<br>
 
@@ -861,7 +861,7 @@ StringBuffer sb = new StringBuffer("Java");
 ```
 
 
-String이 길거나 String 작업이 많은 경우,<br>
+문자열이 길거나 문자열 작업이 많은 경우,<br>
 String 클래스보다 StringBuffer 클래스를 이용하는 것이 적합하다.<br>
 다음은 StringBuffer 클래스의 활용 예시이다.<br>
 
@@ -898,3 +898,155 @@ Hello@Java!
 ## 8. StringTokenizer 클래스
 
 
+StringTokenizer 클래스는 문자열을 분리하기 위해 사용된다.<br>
+문자열을 분리할 때 사용되는 기준 문자를 구분 문자(delimiter)라고 한다.<br>
+그리고 구분 문자로 분리된 문자열을 토큰(token)이라고 한다.<br>
+
+
+아래는 StringTokenizer 클래스의 주요 메소드들이다.<br>
+
+
+### 1. StringTokenizer(String str)
+
+str String으로 파싱한 StringTokenizer를 생성한다.<br>
+
+
+### 2. int countTokens()
+
+StringTokenizer에 포함된 토큰의 개수를 리턴한다.<br>
+
+
+### 3. boolean hasMoreTokens()
+
+StringTokenizer에 다음 토큰이 있으면 true를 리턴한다.<br>
+
+
+### 4. String nextToken()
+
+다음 토큰을 리턴한다.<br>
+
+
+다음은 StringTokenizer 클래스의 활용 예시이다.
+
+
+```java
+public class StringTokenizerEx {
+    public static void main(String[] args) {
+		String query = "name=jaeseo&addr=yongin&age=25";
+		StringTokenizer st = new StringTokenizer(query, "&");
+		
+		int n = st.countTokens();   // 분리된 토큰 개수
+		System.out.println("토큰 개수 = " + n);
+		
+		while(st.hasMoreTokens()) { // 토큰이 남아있는 동안 반복, for(int i = 0; i < n; i++)과 동일
+			String token = st.nextToken();  // 토큰 얻기
+			System.out.println(token);  // 토큰 출력
+		}
+	}
+}
+```
+
+
+실행 결과는 다음과 같다.<br>
+
+
+```java
+토큰 개수 = 3
+name=jaeseo
+addr=yongin
+age=25
+```
+
+
+
+
+
+
+## 9. Math 클래스
+
+
+Math 클래스는 기본적인 산술 연산을 수행하는<br>
+메소드를 제공하는 클래스이다.<br>
+모든 메소드가 static 타입이기 때문에<br>
+'Math.메소드' 형태로 사용할 수 있다.<br>
+
+
+아래는 Math 클래스의 주요 메소드들이다.<br>
+
+
+### 1. static double abs(double a)
+
+실수 a의 절댓값을 리턴한다.<br>
+
+
+### 2. static double exp(double a)
+
+e의 a제곱 값을 리턴한다.<br>
+
+
+### 3. static double sin(double a)
+
+실수 a의 sine 값을 리턴한다.<br>
+
+
+### 4. static double random()
+
+0.0보다 크거나 같고 1.0보다 작은 임의의 실수를 리턴한다.<br>
+Math.random()은 중복 값을 허용하기 때문에,<br>
+중복이 없어야 하는 경우 추가 처리가 필요하다.<br>
+
+
+### 5. static long round(double a)
+
+실수 a를 소수 첫째 자리에서 반올림한 정수를 long 타입으로 반환한다.<br>
+
+
+### 6. static double sqrt(double a)
+
+실수 a의 제곱근을 리턴한다.<br>
+
+
+다음은 Math 클래스의 활용 예시이다.<br>
+
+
+```java
+public class MathEx {
+    public static void main(String[] args) {
+		System.out.println(Math.abs(-3.14));	// 절댓값 구하기
+		System.out.println(Math.sqrt(9.0));		// 제곱근
+		System.out.println(Math.exp(2));		// e의 2제곱
+		System.out.println(Math.round(3.14));	// 반올림
+		
+		
+		System.out.println("이번주 행운의 번호는 ");
+		
+		for(int i = 0; i < 7; i++) {
+			System.out.print((int)(Math.random() * 45 + 1) + " ");	// 난수 발생
+		}
+	}
+}
+```
+
+
+실행 결과는 다음과 같다.<br>
+
+
+```java
+3.14
+3.0
+7.38905609893065
+3
+이번주 행운의 번호는 
+43 34 30 42 10 17 3 
+```
+
+
+-----------------------------------------------------------------------<br>
+
+
+지금까지 자바의 모듈과 패키지에 대해 공부해 보았다.<br>
+다음 글에서는 자바의 컬렉션과 제네릭에 대해서 공부해 보겠다.<br>
+
+
+---
+※ 본 글은 개인 학습을 목적으로 「명품 자바 에센셜」(황기태 지음, 생능출판)을 참고하여 작성하였습니다.
