--- a/_posts/2026-01-09-Java_Ch11.md
+++ b/_posts/2026-01-09-Java_Ch11.md
@@ -508,3 +508,444 @@ public class MouseListenerEx extends JFrame {
 
 
 ![마우스 이벤트 리스너](/assets/images/마우스%20이벤트%20리스너.PNG)
+
+
+
+
+
+
+## 4. 어댑터(Adapter) 클래스
+
+
+리스너 인터페이스를 통해 이벤트 리스너를 구현할 때<br>
+리스너 인터페이스의 메소드를 모두 구현해야 하는 부담이 있다.<br>
+
+자바는 이러한 부담을 줄이기 위해<br>
+리스너 인터페이스의 추상 메소드를<br>
+아무 동작도 하지 않는 빈 메소드로 미리 구현해 둔 클래스를 제공하는데,<br>
+이를 어댑터(Adapter) 클래스라고 한다.<br>
+
+다음은 리스너 인터페이스와 대응하는 어댑터 클래스를 정리한 표이다.<br>
+
+※ 모든 이벤트 리스너 인터페이스에 어댑터 클래스가 제공되는 것은 아니다.<br>
+
+
+![어댑터 클래스](/assets/images/어댑터%20클래스.png)
+
+
+그럼 어댑터 클래스를 이용해서,<br>
+위에서 작성한 마우스 이벤트 리스너 코드를 수정해 보자.<br>
+
+
+```java
+public class MouseAdapterEx extends JFrame {
+
+	private JLabel la = new JLabel("Java");
+
+	public MouseAdapterEx() {
+		setTitle("마우스 이벤트 리스너");
+		setDefaultCloseOperation(JFrame.EXIT_ON_CLOSE);
+
+		Container c = getContentPane();
+
+		c.addMouseListener(new MyMouseAdapter()); // 컨텐트팬에 마우스 리스너 등록
+
+		c.setLayout(null); // 컨텐트팬의 배치 관리자 삭제
+
+		la.setSize(50, 30);
+		la.setLocation(30, 30);
+
+		c.add(la); // 레이블 삽입
+
+		setSize(300, 300);
+		setVisible(true);
+	}
+
+	class MyMouseAdapter extends MouseAdapter { // MouseAdapter 를 상속받아 리스너 구현
+
+		public void mousePressed(MouseEvent e) {
+			int x = e.getX(); // 마우스 클릭 좌표 x
+			int y = e.getY(); // 마우스 클릭 좌표 y
+
+			la.setLocation(x, y); // 레이블의 위치를 (x,y)로 이동
+		}
+
+	}
+
+	public static void main(String[] args) {
+		new MouseAdapterEx();
+	}
+
+}
+```
+
+
+처음 코드에서는 MouseListener 인터페이스를 직접 구현해야 하므로,<br>
+다음과 같이 사용하지 않는 메소드까지 모두 구현해야 했다.<br>
+
+
+```java
+class MyMouseListener implements MouseListener { // Mouse 리스너 구현
+
+		public void mousePressed(MouseEvent e) {
+			int x = e.getX(); // 마우스 클릭 좌표 x
+			int y = e.getY(); // 마우스 클릭 좌표 y
+
+			la.setLocation(x, y); // 레이블의 위치를 (x,y)로 이동
+		}
+
+		public void mouseReleased(MouseEvent e) {
+		}
+
+		public void mouseClicked(MouseEvent e) {
+		}
+
+		public void mouseEntered(MouseEvent e) {
+		}
+
+		public void mouseExited(MouseEvent e) {
+		}
+	}
+```
+
+
+하지만 어댑터 클래스를 사용하면<br>
+다음과 같이 필요한 메소드만 선택적으로 구현할 수 있다.<br>
+
+
+```java
+class MyMouseAdapter extends MouseAdapter { // MouseAdapter 를 상속받아 리스너 구현
+
+		public void mousePressed(MouseEvent e) {
+			int x = e.getX(); // 마우스 클릭 좌표 x
+			int y = e.getY(); // 마우스 클릭 좌표 y
+
+			la.setLocation(x, y); // 레이블의 위치를 (x,y)로 이동
+		}
+
+	}
+```
+
+
+
+
+
+
+## 5. Key 이벤트와 KeyListener
+
+
+Key 이벤트는 사용자가 키를 입력할 때 발생하는 이벤트이며,<br>
+모든 컴포넌트가 Key 이벤트를 받을 수 있다.<br>
+
+그러나 응용프로그램 내에 포커스(focus)를 가진 컴포넌트가<br>
+키 입력을 독점하기 때문에,<br>
+현재 포커스를 가진 컴포넌트에만 Key 이벤트가 발생한다.<br>
+포커스란 키 입력의 독점권을 뜻한다.<br>
+
+어떤 컴포넌트에게 키를 입력하고자 한다면,<br>
+`<Tab>` 키 등 스윙의 포커스 이동 방향을 통해<br>
+컴포넌트로 포커스를 이동시켜야 한다.<br>
+
+응용프로그램에서 강제로 임의의 컴포넌트에게<br>
+포커스를 주기 위해서는 다음 두 코드가 모두 필요하다.<br>
+
+
+```java
+component.setFocusable(true);	// component 가 포커스를 받을 수 있도록 설정
+component.requestFocus();	// component 에게 포커스를 주어 키 입력을 받을 수 있게 설정
+```
+
+
+KeyListener의 메소드 중<br>
+keyPressed()는 키를 누르는 순간에,<br>
+keyReleased()는 누른 키를 떼는 순간에 호출된다.<br>
+keyTyped()는 하나의 문자가 입력되었을 때 호출되며,<br>
+유니코드 문자에 해당하는 키 입력에서만 발생한다.<br>
+
+유니코드(Unicode)란 전 세계의 모든 문자를<br>
+컴퓨터에서 일관되게 표현하고 다루고자 설계된<br>
+국제 산업 표준이다.<br>
+
+유니코드는 한글, 영어 알파벳 등<br>
+세계 여러 나라의 문자들에 대해 코드 값을 정의하고 있다.<br>
+
+그러므로 모든 키 입력에 대해서 keyPressed(), keyReleased()가 호출되고,<br>
+A~Z, a~z, 0~9, !, @, & 등 문자 키에 대해서는<br>
+keyTyped()가 추가적으로 호출된다.<br>
+
+F1, Home, Delete, Shift, Alt 등<br>
+문자가 아닌 키가 입력될 땐 keyTyped()가 호출되지 않는다.<br>
+
+Key 이벤트가 발생하면 입력된 키 정보가 KeyEvent 객체에 담겨져 전달된다.<br>
+이 객체는 입력된 키 값을 리턴하는 두 개의 메소드를 제공하며,<br>
+이들을 이용해 입력된 키를 판별할 수 있다.<br>
+
+
+### char KeyEvent.getKeyChar()
+
+
+입력된 키의 유니코드 값을 리턴하고,<br>
+유니코드 키가 아닌 경우<br>
+KeyEvent.CHAR_UNDEFINED 를 리턴한다.<br>
+
+
+### int KeyEvent.getKeyCode()
+
+
+모든 키에 대해 정수형의 키 코드(key code)를 리턴한다.<br>
+키 코드는 운영체제나 하드웨어마다 다를 수 있기 때문에,<br>
+입력된 키 판별을 위해선 반드시 getKeyCode()가 리턴한<br>
+키 코드와, 가상 키(Virtual Key) 값을 비교해야 한다.<br>
+
+가상 키는 KeyEvent 클래스에 VK_로 시작하는<br>
+static 상수로 선언되어 있다.<br>
+
+
+이 메소드들을 사용해 `<Enter>` 키를 누르면 배경색을,<br>
+방향키를 누르면 문자열이 이동하는 프로그램을 만들어 보자.<br>
+
+
+```java
+public class KeyEventEx extends JFrame {
+
+	// private -> 이 클래스에서만 접근 가능
+	private JLabel la = new JLabel("<Enter>키로 배경색이 바뀝니다.");
+	private JLabel la2 = new JLabel("Java");
+
+	public KeyEventEx() {
+		super("KeyEvent 응용프로그램");
+		setDefaultCloseOperation(JFrame.EXIT_ON_CLOSE);
+
+		Container c = getContentPane(); // 컨텐트팬 알아내기
+
+		c.setLayout(null); // 문자열을 움직이기 위해 배치관리자 삭제
+
+		la.setLocation(30, 30); // la 의 초기 위치
+		la.setSize(500, 150);
+
+		la2.setLocation(50, 50); // la2 의 초기 위치
+		la2.setSize(100, 30);
+
+		c.add(la);
+		c.add(la2);
+
+		c.addKeyListener(new MyKeyListener()); // 키 리스너 등록
+
+		setSize(300, 300);
+		setVisible(true);
+
+		c.setFocusable(true); // 컨텐트팬이 포커스를 받을 수 있도록 설정
+		c.requestFocus(); // 컨텐트팬에 포커스 설정 -> 키 입력 가능해짐
+	}
+
+	class MyKeyListener extends KeyAdapter { // 키 리스너
+
+		public void keyPressed(KeyEvent e) {
+
+			int keyCode = e.getKeyCode();
+
+			switch (keyCode) {
+			case KeyEvent.VK_ENTER: // Enter 키
+				// 임의의 색을 만들기 위해 랜덤 r, g, b 성분 생성
+				int r = (int) (Math.random() * 256); // 0~255 사이의 임의의 red 성분
+				int g = (int) (Math.random() * 256); // 0~255 사이의 임의의 green 성분
+				int b = (int) (Math.random() * 256); // 0~255 사이의 임의의 blue 성분
+
+				getContentPane().setBackground(new Color(r, g, b)); // 컨텐트팬 배경색 설정
+				break;
+			case KeyEvent.VK_UP: // UP 키
+				la2.setLocation(la2.getX(), la2.getY() - 10);
+				break;
+			case KeyEvent.VK_DOWN: // DOWN 키
+				la2.setLocation(la2.getX(), la2.getY() + 10);
+				break;
+			case KeyEvent.VK_LEFT: // LEFT 키
+				la2.setLocation(la2.getX() - 10, la2.getY());
+				break;
+			case KeyEvent.VK_RIGHT: // RIGHT 키
+				la2.setLocation(la2.getX() + 10, la2.getY());
+				break;
+			}
+		}
+	}
+
+	public static void main(String[] args) {
+		new KeyEventEx();
+	}
+
+}
+```
+
+
+실행 결과는 다음과 같다.<br>
+`<Enter>` 키로 배경색을,<br>
+방향키로 문자열의 위치를 변경하는 모습이다.<br>
+
+
+![KeyEvent 예제](/assets/images/KeyEvent%20예제.PNG)
+
+
+
+
+
+
+## 6. Mouse 이벤트와 MouseListener, MouseMotionListener
+
+
+Mouse 이벤트는 다음과 같이<br>
+사용자가 마우스를 조작하는 7가지 경우에 발생한다.<br>
+
+
+![Mouse 이벤트](/assets/images/Mouse%20이벤트.png)
+
+
+마우스가 눌린 위치에서 그대로 떼어지면,<br>
+다음과 같은 순서로 메소드가 호출된다.<br>
+
+
+```java
+mousePressed(), mouseReleased(), mouseClicked()
+```
+
+
+하지만 마우스가 드래그되면,<br>
+다음과 같은 순서로 메소드가 호출된다.<br>
+
+
+```java
+mousePressed(), mouseDragged(), mouseDragged(), .... ,  mouseReleased()
+```
+
+
+### 마우스 리스너 달기
+
+
+위 표의 처음 5가지 경우에 발생하는<br>
+Mouse 이벤트를 처리하고자 한다면,<br>
+리스너를 다음과 같이 등록하면 된다.<br>
+
+
+```java
+component.addMouseListener(new MyMouseListener());
+```
+
+
+그러나 같은 컴포넌트가 마우스 드래깅과<br>
+마우스 무브를 함께 처리하고자 한다면,<br>
+MouseMotion 리스너를 따로 등록해야 한다.<br>
+
+
+```java
+component.addMouseMotionListener(new MyMouseListener());
+```
+
+
+### MouseEvent 객체 활용
+
+
+MouseEvent 객체는 Mouse 이벤트나<br>
+MouseMotion 이벤트가 발생한 상황 정보를 제공한다.<br>
+이 객체를 통해 마우스 포인터의 위치와 클릭 횟수를 알아낼 수 있다.<br>
+
+
+```java
+int getX()	// 마우스 포인터의 x 위치 리턴
+int getY()	// 마우스 포인터의 y 위치 리턴
+
+int getClickCount()	// 마우스의 클릭 횟수 리턴
+```
+
+
+이 메소드들을 활용해<br>
+7가지의 마우스 이벤트를 처리하는 프로그램을 만들어 보자.<br>
+
+
+```java
+public class MouseEventEx extends JFrame {
+
+	private JLabel la = new JLabel("   Move Me"); // 마우스로 이동시킬 레이블 컴포넌트
+
+	public MouseEventEx() {
+		super("MouseEvent 응용프로그램");
+		setDefaultCloseOperation(JFrame.EXIT_ON_CLOSE);
+
+		Container c = getContentPane();
+
+		MyMouseListener listener = new MyMouseListener(); // 마우스/모션 리스너 객체 생성
+
+		c.addMouseListener(listener);
+		c.addMouseMotionListener(listener);
+
+		c.setLayout(null);
+
+		la.setSize(70, 30);
+		la.setLocation(100, 70);
+
+		c.add(la);
+
+		setSize(330, 200);
+		setVisible(true);
+	}
+
+	class MyMouseListener implements MouseListener, MouseMotionListener {
+		// MouseListener 의 5개 메소드 구현
+		public void mousePressed(MouseEvent e) {
+			la.setLocation(e.getX(), e.getY()); // 마우스가 눌러진 위치로 레이블 이동
+			setTitle("mousePressed(" + e.getX() + "," + e.getY() + ")"); // 눌러진 위치 출력
+		}
+
+		public void mouseReleased(MouseEvent e) {
+			la.setLocation(e.getX(), e.getY()); // 마우스가 놓여진 위치에 레이블 이동
+			setTitle("mouseReleased(" + e.getX() + "," + e.getY() + ")"); // 떼어진 위치 출력
+		}
+
+		public void mouseClicked(MouseEvent e) {
+		}
+
+		public void mouseEntered(MouseEvent e) {
+			Component comp = (Component) e.getSource();
+			comp.setBackground(Color.cyan); // 마우스가 올라간 곳 색 변경
+		}
+
+		public void mouseExited(MouseEvent e) {
+			Component comp = (Component) e.getSource();
+			comp.setBackground(Color.yellow); // 마우스가 내려간 곳 색 변경
+
+			setTitle("mouseExited(" + e.getX() + "," + e.getY() + ")"); // 벗어난 위치 출력
+		}
+
+		// MouseMotionListener 의 2개 메소드 구현
+		public void mouseDragged(MouseEvent e) { // 마우스가 드래깅되는 동안 계속 호출
+			la.setLocation(e.getX(), e.getY());
+			setTitle("mouseDragged(" + e.getX() + "," + e.getY() + ")"); // 드래깅 위치 출력
+		}
+
+		public void mouseMoved(MouseEvent e) { // 마우스가 움직이는 동안 계속 호출
+			la.setLocation(e.getX(), e.getY());
+			setTitle("mouseMoved(" + e.getX() + "," + e.getY() + ")"); // 무브 위치 출력
+		}
+	}
+
+	public static void main(String[] args) {
+		new MouseEventEx();
+	}
+
+}
+```
+
+
+실행 결과는 다음과 같다.<br>
+
+
+![MouseEvent 예제](/assets/images/MouseEvent%20예제.PNG)
+
+
+-----------------------------------------------------------------------<br>
+
+
+지금까지 자바의 이벤트 처리에 대해 공부해 보았다.<br>
+다음 글에서는 자바의 스윙 컴포넌트 활용에 대해서 공부해 보겠다.<br>
+
+
+---
+※ 본 글은 개인 학습을 목적으로 「명품 자바 에센셜」(황기태 지음, 생능출판)을 참고하여 작성하였습니다.
