--- a/_posts/2026-01-13-Java_Ch12.md
+++ b/_posts/2026-01-13-Java_Ch12.md
@@ -674,3 +674,112 @@ public class JTextFieldEx extends JFrame {
 
 
 ![JTextField 예제](/assets/images/JTextField%20예제.PNG)
+
+
+
+
+
+
+## 7. JTextArea
+
+
+JTextArea를 이용하면<br>
+여러 줄의 문자열을 입력받는 텍스트 입력 필드를 만들 수 있다.<br>
+
+입력 필드의 표시 크기보다<br>
+더 많은 줄의 문자열을 입력할 수 있지만,<br>
+스크롤바를 사용하려면 JScrollPane에 삽입해야 한다.<br>
+
+JTextArea 자체에는 스크롤 기능이 제공되지 않는다.<br>
+
+
+### JTextArea 생성자
+
+
+텍스트영역의 생성자는 다음과 같다.<br>
+
+
+```java
+JTextArea() 	// 빈 텍스트영역
+JTextArea(int rows, int cols) 	// rows × cols 크기의 텍스트영역
+JTextArea(String text) 	// text 문자열로 초기화된 텍스트영역
+JTextArea(String text, int rows, int cols) 	// rows × cols 크기, text로 초기화된 텍스트영역
+```
+
+
+### JTextArea 컴포넌트 생성
+
+
+텍스트영역을 생성하는 방법은 두 가지로 나뉜다.<br>
+
+
+1️⃣ 스크롤바가 없는 텍스트영역<br>
+
+
+```java
+container.add(new JTextArea("Java", 7, 20));
+```
+
+이 경우 입력 내용이 표시 영역을 초과하더라도<br>
+스크롤바는 제공되지 않는다.<br>
+
+
+2️⃣ 스크롤바를 지원하는 텍스트영역<br>
+
+
+```java
+container.add(new JScrollPane(new JTextArea("Java", 7, 20)));
+```
+
+
+이 방법은 입력 내용이 지정된 크기를 초과하면<br>
+자동으로 스크롤바가 나타나,<br>
+내용을 스크롤하여 확인할 수 있다.<br>
+
+다음은 JTextArea를 활용한 예제이다.<br>
+
+
+```java
+public class JTextAreaEx extends JFrame {
+
+	private JTextField tf = new JTextField(20);
+	private JTextArea ta = new JTextArea(7, 20);	// 7행 × 20열 크기의 텍스트영역
+	public JTextAreaEx() {
+		super("JTextArea 예제");
+		setDefaultCloseOperation(JFrame.EXIT_ON_CLOSE);
+
+		Container c = getContentPane();
+
+		c.setLayout(new FlowLayout());
+
+		c.add(new JLabel("입력 후 <Enter> 키를 입력하세요."));
+		c.add(tf);
+		c.add(new JScrollPane(ta));
+
+		// 텍스트필드에 Action 리스너를 등록
+		tf.addActionListener(new ActionListener() {
+
+			// <Enter> 키 입력 시 작동하는 리스너
+			public void actionPerformed(ActionEvent e) {
+				JTextField t = (JTextField) e.getSource();
+				ta.append(t.getText() + "\n"); // 텍스트필드의 문자열을 텍스트영역에 추가
+				t.setText(""); // 현재 텍스트필드에 입력된 내용 지우기
+			}
+
+		});
+
+		setSize(300, 250);
+		setVisible(true);
+	}
+
+	public static void main(String[] args) {
+		new JTextAreaEx();
+	}
+}
+```
+
+
+실행 결과는 다음과 같다.<br>
+
+
+![JTextArea 예제](/assets/images/JTextArea%20예제.PNG)
